--- a/_posts/2022-12-27-诗经札记.md
+++ b/_posts/2022-12-27-诗经札记.md
@@ -10,7 +10,11 @@ date: 2022-12-27 11:44:01
 > 《毛诗序》云：“《诗》有六义焉：一曰风，二曰赋，三曰比，四曰兴，五曰雅，六曰颂。”今人一般认为，风、雅、颂指诗歌的体裁，赋、比、兴指诗歌的艺术手法。风是民间乐歌，包括周南、召南、邶、鄘、卫、王、郑、齐、魏、唐、秦、陈、桧、曹、豳等十五国风；雅是朝廷乐歌，分为小雅和大雅；颂是宗庙乐歌，分为周颂、鲁颂、商颂。《诗经》犹如一幅历史画卷，细致生动地反映了周代社会生活的方方面面及先民的思想情感。关于赋、比、兴，朱熹说，赋是“敷陈其事而直言之”，比是“以彼物比此物”，兴是“先言他物以引起所咏之词”。《诗经》是中国古典诗歌的源头，它所孕育的现实主义文学精神和比兴艺术传统，对中国古代文学产生了深远影响。
 
 ## 周南
+
+<hr/>
+
 ### 关雎
+
 #### 关关雎鸠①，在河之洲②。窈窕淑女③，君子好逑④。
 ①关关：鸟的和鸣声。雎（jū）鸠：一种水鸟，相传此鸟雌雄情意专一。
 ②洲：水中陆地。
@@ -54,7 +58,11 @@ date: 2022-12-27 11:44:01
 ⑤永：长。
 ⑥方：用木筏渡水。
 > 南方有树高又高，树下休息难做到。汉江有位好姑娘，要想追求路途遥。汉水浩渺宽又宽，难以游泳到对岸。长江水流急又长，木筏怎能渡过江。
+
 ## 召南
+
+<hr/>
+
 ### 草虫
 未见君子，忧心忡忡①。
 ①忡忡（chōng）：心中忧愁不安的样子。
@@ -77,7 +85,11 @@ date: 2022-12-27 11:44:01
 ① （nóng）：浓艳、盛大貌。
 ②华如桃李：如桃李之花，红白艳丽。
 > 怎么如此的浓艳漂亮？像那桃李花开一样芬芳。
+
 ## 邶风
+
+<hr/>
+
 ### 柏舟
 耿耿不寐①，如有隐忧②。
 ①耿耿：不安的样子。
@@ -146,7 +158,9 @@ date: 2022-12-27 11:44:01
 ①亡：无。
 ②民：人。这里指邻人。
 > 家里有这没有那，尽心尽力来备办。左邻右舍有灾难，奔走救助不迟延。
+
 ### 北风
+
 惠而好我，携手同归①。
 ①同归：一同走。
 > 赞同我的好朋友，携手同去好地方。
@@ -154,7 +168,11 @@ date: 2022-12-27 11:44:01
 ①莫赤匪狐：狐狸没有不是红色的。
 ②莫黑匪乌：乌鸦没有不是黑色的。
 > 天下狐狸毛皆赤，天下乌鸦尽皆黑。
+
 ## 鄘风
+
+<hr/>
+
 ### 墙有茨
 中冓之言①，不可详也②！所可详也，言之长也！
 ①中冓（gòu）：宫闱，宫廷内部。
@@ -166,7 +184,11 @@ date: 2022-12-27 11:44:01
 ②仪：礼仪，威仪。
 ③何为：为何，做什么。
 > 看那老鼠还有皮，做人怎能没礼仪。做人如果没礼仪，不如早早就死去。
+
 ## 卫风
+
+<hr/>
+
 ### 淇奥
 瞻彼淇奥①，绿竹猗猗②。有匪君子③，如切如磋④，如琢如磨。
 ①瞻：看。淇：淇水。奥（yù）：又作“澳”或“隩”，水岸深曲处。
@@ -217,7 +239,11 @@ date: 2022-12-27 11:44:01
 ①投：赠。
 ②报：报答，回赠。琼瑶：玉名。
 > 赠给我一个木桃，我用美玉来回报。不是仅仅为回报，表示永和他友好。
+
 ## 王风
+
+<hr/>
+
 ### 黍离
 彼黍离离①，彼稷之苗。行迈靡靡②，中心摇摇③。知我者，谓我心忧；不知我者，谓我何求。悠悠苍天④，此何人哉？
 ①黍（shǔ）：北方的一种农作物，形似小米，有黏性。离离：一行行的。
@@ -242,7 +268,11 @@ date: 2022-12-27 11:44:01
 ③予：我。
 ④有如皦（jiǎo）日：有此白日。如，此。皦，白，光明。
 > 活着不能在一室，死后同埋一个坑。我说的话你不信，就让太阳来作证。
+
 ## 郑风
+
+<hr/>
+
 ### 将仲子
 人之多言，亦可畏也。
 > 闲话也能把人杀，这事真叫我害怕。
@@ -277,7 +307,11 @@ date: 2022-12-27 11:44:01
 野有蔓草，零露瀼瀼①。有美一人，婉如清扬。
 ①瀼瀼（ráng）：露水多的样子。
 > 野草蔓蔓连成片，草上露珠大又圆。有位美女路上走，眉清目秀美容颜。
+
 ## 齐风
+
+<hr/>
+
 ### 南山
 析薪如之何①？匪斧不克。取妻如之何？匪媒不得。
 ①析薪：劈柴。
@@ -287,7 +321,11 @@ date: 2022-12-27 11:44:01
 ①远人：远方的人。
 ②劳：忧。忉忉：忧伤貌。
 > 不要想念远方人，忧伤劳心实熬煎。
+
 ## 魏风
+
+<hr/>
+
 ### 伐檀
 彼君子兮，不素餐兮①！
 ①素餐：白吃饭。
@@ -300,7 +338,11 @@ date: 2022-12-27 11:44:01
 ④适：往。乐土：安居乐业的地方。
 ⑤爰：乃，就。
 > 大老鼠啊大老鼠，不要偷吃我的黍！多年辛苦养活你，我的死活你不顾。发誓从此离开你，到那理想的乐土。乐土啊美好乐土，那是安居好去处。
+
 ## 唐风
+
+<hr/>
+
 ### 蟋蟀
 无已大康①，职思其忧②。好乐无荒③，良士休休④。
 ①已：甚，过度。大康：即“泰康”，过于安乐。
@@ -321,7 +363,11 @@ date: 2022-12-27 11:44:01
 ①悠悠：高远的样子。
 ②曷：何时。
 > 悠悠苍天在上方，服役期限有多长？
+
 ## 秦风
+
+<hr/>
+
 ### 车邻
 今者不乐①，逝者其耋②。
 ①今者：现在。
@@ -366,7 +412,11 @@ date: 2022-12-27 11:44:01
 ①袍：长衣。就是斗篷，白天当衣，夜里当被。
 ②王：指周天子。一说指秦国国君。于：语助词。兴师：起兵。
 > 谁说我们没衣裳？战袍共同伙着穿。国王兴兵要征讨，赶快修好戈和矛。你我一同把仇报。
+
 ## 陈风
+
+<hr/>
+
 ### 东门之杨
 东门之杨，其叶牂牂①。昏以为期②，明星煌煌③。
 ①牂牂（zāng）：枝叶茂盛的样子。
@@ -386,7 +436,11 @@ date: 2022-12-27 11:44:01
 ②无为：无办法。
 ③涕：眼泪。泗：鼻涕。滂沱（pāng tuó）：本意是雨下得大，此处形容泪涕俱下的样子。
 > 那边有个美人儿，我爱他（她）爱得没办法。日夜想他（她）难入睡，哭得眼泪哗啦啦。
+
 ## 桧风
+
+<hr/>
+
 ### 羔裘
 岂不尔思？我心忧伤！
 > 怎能让我不忧思？思念使我心忧伤！
@@ -396,14 +450,22 @@ date: 2022-12-27 11:44:01
 ②猗傩（ē nuó）：义同“婀娜”，茂盛而柔美的样子。 ③夭：少。指苌楚处于茁壮成长时期。沃沃：形容叶子润泽的样子。
 ④乐：喜。这里有羡慕之意。子：指苌楚。
 > 低洼地上长羊桃，蔓长藤绕枝繁茂。鲜嫩润泽长势好，羡慕你没有知觉不烦恼。
+
 ## 曹风
+
+<hr/>
+
 ### 鸤鸠
 > 鸤鸠 布谷鸟
 淑人君子，其仪一兮①。其仪一兮，心如结兮②。
 ①仪：威仪，即今言风度、仪容。一：始终如一。
 ②结：凝结，固结。言心之坚定。
 > 贤明高尚的君子，仪容始终 美好。仪容始终 美好，内心坚定有节操。
+
 ## 豳风
+
+<hr/>
+
 ### 七月
 七月流火①，九月授衣②。春日载阳③，有鸣仓庚④。女执懿筐⑤，遵彼微行⑥，爰求柔桑⑦。春日迟迟，采蘩祁祁⑧。女心伤悲，殆及公子同归⑨。
 ①流：向下行。火：星名，亦称“大火”。每年夏历六月此星出现于正南方，位置 高，七月以后就偏西向下，所以称“流火”。
@@ -444,7 +506,11 @@ date: 2022-12-27 11:44:01
 伐柯伐柯，其则不远①。
 ①则：法则，规则。《礼记·中庸》：“‘伐柯伐柯，其则不远。’执柯以伐柯，睨而视之，犹以为远，故君子以人治人，改而止。”
 > 做斧柄呀做斧柄，规则离你并不远。
+
 ## 小雅
+
+<hr/>
+
 ### 鹿鸣
 呦呦鹿鸣①，食野之苹。我有嘉宾，鼓瑟吹笙。
 ①呦呦（yōu）：鹿鸣叫的声音。
@@ -795,7 +861,11 @@ date: 2022-12-27 11:44:01
 ①兕（sì）：野牛。
 ②率：循，沿着。
 > 既非野牛又非虎，常在旷野里奔走。可怜我们出征人，早晚忙碌不停休。
+
 ## 大雅
+
+<hr/>
+
 ### 文王
 周虽旧邦①，其命维新②。
 ①旧邦：旧国。周由文王的祖父古公亶父建国，所以称“旧邦”。
@@ -913,6 +983,7 @@ date: 2022-12-27 11:44:01
 ①威仪：仪容举止。
 ②近：靠近。有德：有道德的人。
 > 谨慎自己的举止，亲近高尚的君子。
+
 ### 板
 出话不然①，为犹不远②。靡圣管管③，不实于亶④。
 ①不然：不对，不是。或以为说话不算数。
@@ -944,6 +1015,7 @@ date: 2022-12-27 11:44:01
 ④携：提。一说携亦“取”。
 ⑤曰：语助词。益：通“隘”，阻碍。
 > 上天开启向善心，如埙如篪相和应，又如两璋为一圭，如同取物带身上。提物没有丝毫障，因势利导很顺当。
+
 ### 荡
 天生烝民①，其命匪谌②。靡不有初，鲜克有终③。
 ①烝民：众人。
@@ -1022,6 +1094,7 @@ date: 2022-12-27 11:44:01
 ②谁夙知而莫成：言谁早慧而反晚成。夙知，早慧。莫，即
 “暮”。
 > 人应谦虚不自满，谁能早慧器晚成？
+
 ### 桑柔
 谁能执热，逝不以濯①？
 ①逝不：何不。濯（zhuó）：当指沐浴冲凉。毛传：“濯，所以救热也。”
@@ -1050,6 +1123,7 @@ date: 2022-12-27 11:44:01
 ①回遹（yù）：邪僻。
 ②竞：逐，争。用力：任用暴力。郑笺：“言民之行维邪者，主由为政者逐用彊力相尚故也。”
 > 民众行为不端正，只因官府施暴政。
+
 ### 烝民
 天生烝民①，有物有则。民之秉彝②，好是懿德。
 ①烝（zhēng）民：众民。
@@ -1072,18 +1146,21 @@ date: 2022-12-27 11:44:01
 人亦有言：德 如毛①，民鲜克举之。
 ① （yóu）：轻。
 > 世俗还有这样话：德如羽毛一样轻，人却很难举起它。
+
 ### 江汉
 明明天子①，令闻不已。矢其文德②，洽此四国③。
 ①明明：有道之貌。王念孙以为“勉勉”之音转，即勤勉。
 ②矢：施，陈。
 ③洽：协和。
 > 天子勤勉又清明，美好声誉永传扬。施行文明行德政，四方国家俱安康。
+
 ### 常武
 王旅啴啴①，如飞如翰②，如江如汉，如山之苞③，如川之流。
 ①啴啴（tān）：众多貌。
 ②翰：高飞。郑笺：“翰，鸟中豪俊也。”
 ③苞：根本。郑笺：“山本，以喻不可惊动。”孔疏：“其固守则不可惊动，如山之基本。”
 > 王师威武人众多，进军神速如鸟翔。如江如汉势汹涌，如山如岳立得定，有如洪流不可挡。
+
 ### 瞻卬
 邦靡有定，士民其瘵①。蟊贼蟊疾②，靡有夷届③。罪罟不收④，靡有夷瘳⑤。
 ①士民：士卒百姓。瘵（zhài）：病，指忧患。
@@ -1101,13 +1178,18 @@ date: 2022-12-27 11:44:01
 ①云：语助词。亡：逃亡。
 ②殄（tiǎn）瘁：困病。马瑞辰《毛诗传笺通释》：“殄、瘁二字平列，与尽瘁、憔悴之同为劳病正同。”
 > 贤人忠臣都跑光，国家困顿将灭亡。
+
 ### 召旻
 池之竭矣①，不云自频②。泉之竭矣，不云自中③。
 ①竭：干涸。
 ②频：当从《鲁诗》作“滨”，水边。
 ③中：指泉水的中间。朱熹《诗集传》：“池之竭由外之不入，泉之竭由内之不出，言祸乱有所从起。”
 > 池中之水逐渐干，没有流水注里边。喷泉之水逐渐枯，泉眼里面源头断。
+
 ## 周颂
+
+<hr/>
+
 ### 维天之命
 维天之命①，於穆不已②。
 ①维：语助词。一说“思念”。
@@ -1139,32 +1221,47 @@ date: 2022-12-27 11:44:01
 ①日就月将：日有所得，月有所进。就，成就。将，进。
 ②缉熙：积渐以至于光明。后以缉熙谓光明。
 > 日有所成月月进，学习积累渐明晰。
+
 ## 鲁颂
+
+<hr/>
+
 ### 有
-夙夜在公①，在公明明②。
+
+#### 夙夜在公①，在公明明②。
 ①夙夜在公：指早晚为公家之事奔忙。
 ②明明：即“勉勉”，勤勉之貌。马瑞辰《毛诗传笺通释》：
 “明，勉一声之转，明明即勉勉之假借，谓其在公尽力也。”
 > 早起晚睡办公事，勤勉努力为公忙。
 ### 泮水
-载色载笑①，匪怒伊教②。
+
+#### 载色载笑①，匪怒伊教②。
 ①载色载笑：又高兴又谈笑。载，乃，又。色，和颜悦色。
 ②匪怒伊教：不是怒颜对人，而是温和地教导臣下。
 > 面色温和脸带笑，从不发怒只教导。
+
 ## 商颂
+
+<hr/>
+
 ### 那
-温恭朝夕①，执事有恪②。
+
+#### 温恭朝夕①，执事有恪②。
 ①温恭：温文恭敬。
 ②有恪（kè）：即“恪恪”，恭敬的样子。
 > 朝夕温和又恭敬，做事虔诚又敬谨。
+
 ### 长发
-不竞不 ①，不刚不柔，敷政优优②，百禄是遒③。
+
+#### 不竞不 ①，不刚不柔，敷政优优②，百禄是遒③。
 ① （qiú）：毛传：“ ，急也。”一说，求也。
 ②敷政：施政。优优：宽和貌。
 ③遒：聚集。
 > 不用竞争不急求，不必刚硬不必柔，政令施行很宽优，福禄聚集如山丘。
+
 ### 殷武
-天命降监①，下民有严②。不僭不滥③，不敢怠遑④。
+
+#### 天命降监①，下民有严②。不僭不滥③，不敢怠遑④。
 ①降监：下察人民。降，下。监，监察。
 ②下民：天下的人民。有严：即“严严”，守法谨严貌。
 ③僭：越礼。滥：放纵，恣意妄为。
