--- a/_posts/2022-12-28-纪事.md
+++ b/_posts/2022-12-28-纪事.md
@@ -5,6 +5,13 @@ date: 2022-12-28 09:39:00
 description: 生活中经常遇到一些有趣的事，需要记录下来，比保存在大脑中更加持久。
 ---
 
-## NO0,自序
+## 自序
 
 > 数月前我从水渠边路过，结果被两只流浪狗拦截。这两只狗一只事土狗，另一只像是那种狮子狗之类的，应该都事流浪狗，没人管，因为身上比较脏。我要通过，结果这两家伙就不停的朝我大叫。不得已，我只能后退离开，这两家或直丁丁的盯着我离开。前几日又通过这处水渠的时候，这两两家伙又站在渠对面盯着我，似乎认识我一样。不过这次他他们边上还有一只小狗狗，也是土狗。我瞬间明白了，这两家伙原来事夫妻，上次事因为他媳妇刚下了小崽子，因此怕我伤害他们小宝宝，因此大叫不让我通过。原来万物皆有护崽的意识啊。因此我觉得许多事情都很有意思，把他们记录下来。有时候读读，也是很有意思。
+
+
+## 2022-12-28
+
+> 这两日每天早上门口道路两旁的车上全是厚厚的尘土，不知道是不是因为这几天晚上周边又工地拉土。昨晚在小学门口过斑马线差点被一辆拉土车撞了，这些拉土车司机从来不会礼让行人，所以见到拉土车无比小心呀。
+> 门口的一辆车上土特别厚，关键是前挡上面堆满一大堆停车收费票。按照现在的价格也是一笔不小的费用啊，不知道这个司机怎么想的？
+> 百家视频原创权益也被收回了，不知道是什么原因，哎看来我还是不适合做视频赚钱呀，能干点什么维持生计呢？
