添加二十五史目录
添加二十五史目录

--- a/_posts/2022-03-03-中华简史_夏.md
+++ b/_posts/2022-03-03-中华简史_夏.md
@@ -5,13 +5,13 @@ date: 2022-12-26 09:52:00
 description: 禹传子，家天下，中国历史进入奴隶社会。
 ---
 
-### 概述
+## 概述
 ```
 > 夏朝（约前21世纪—约前16世纪）是中国史书中记载的第一个世袭制朝代。一般认为夏朝是多个部落联盟或复杂酋邦形式的国家。夏时期的文物中有一定数量的青铜和玉制的礼器，年代约在新石器时代晚期、青铜时代初期。
 ```
 
 
-### 大禹（鲧之子）
+## 大禹（鲧之子）
 > 夏后禹元岁，春正月，禹践天子之位于韩。以金德王，仍以寅月为岁首，改“载”曰“岁”。
 ```
 帝姒姓，名文命，崇伯鲧之子，黄帝轩辕氏之玄孙也。母有莘氏女，曰修己，生禹。长九尺二寸。
@@ -39,7 +39,7 @@ description: 禹传子，家天下，中国历史进入奴隶社会。
 > 初，禹到大越，上茅山，大会计，爵有德，封有功，更名茅山曰会稽。会稽者，会计也。至是禹巡狩江南，致群臣于会稽之山，防风氏后至，禹杀而戮之。禹崩于会稽，因葬焉。
 
 
-### 启（禹之子）
+## 启（禹之子）
 ```
 初，禹娶涂山氏女，名曰，生子启，辛、壬、癸、甲，启呱呱而泣，禹弗子，惟荒度土功。
 ```
@@ -51,31 +51,31 @@ description: 禹传子，家天下，中国历史进入奴隶社会。
 > 武观及西河叛。彭伯寿率师征西河，武观来归。
 > 帝启去世，太康践位。
 
-### 太康
+## 太康
 > 癸巳，夏太康元岁，王尸位，不修先王之政。
 > 辛亥，十有九岁，王畋于洛表，羿拒于河。五弟御母以从，遂都阳夏。
 > 太康畋猎于洛水之表，十旬弗归。有穷后羿，因民弗忍，拒之于河，不得归国。厥弟五人，御其母以从，徯于洛之汭。五子咸怨，述大禹之戒以作歌。太康既失国，不得归，遂都阳夏。
 > 辛酉，二十九岁，王崩于阳夏，后羿立太康弟仲康。
 
-### 中康
+## 中康
 > 壬戌，夏仲康元岁，命胤侯掌六师。
 > 秋九月朔，辰弗集于房。
 > 癸亥，二岁，命胤侯征羲和。
 > 惟时羲和沉乱于酒，遐弃厥司，至于日食大变，尚罔闻知；王命胤侯往征之。
 > 甲戌，十有三岁，王崩，子相践位。
 
-### 相
+## 相
 > 乙亥，夏后相元岁，徙都商丘。
 > 时权归后羿，相为羿所逐，居商丘，依同姓诸侯斟灌、斟氏。
 > 壬午，八岁，寒浞杀羿。
 > 有穷后羿因夏民以代夏政。羿恃其善射，不修民事，淫于原兽。弃武罗、伯因、熊髠、尨圉而用寒浞。浞行媚于内，施赂于外，娱羿于畋，外内咸叛。羿归自畋，家众杀而烹之。羿篡夏自立凡八岁，至是浞复杀羿而代之，不改有穷之号。浞因羿室，生浇及豷。
 > 壬寅，二十有八岁，寒浞弑王于商丘。浞使浇灭斟灌、斟而弑帝相。后缗方娠，逃出自窦，归于有仍。夏遗臣靡奔有鬲氏。
 
-### 后羿、寒浞
+## 后羿、寒浞
 篡夏40余年
 鉏→穷石
 
-### 少康
+## 少康
 > 癸卯，夏少康元岁，相后缗生少康于有仍。
 > 甲子，二十有二岁，夏少康自有仍奔虞。
 > 少康为仍牧正，浇使椒求之。逃奔有虞，为之庖正，虞思妻之二姚而邑诸纶。有田一成，有众一旅，能布其德而兆其谋，以收夏众，抚其官职。
@@ -86,50 +86,50 @@ description: 禹传子，家天下，中国历史进入奴隶社会。
 > 少康恐禹墓之绝祀，乃封其庶子于越，号曰无馀，春、秋祀禹墓于会稽。
 > 癸卯，六十有一岁，王崩，子季杼践位。
 
-### 帝予（杼）
+## 帝予（杼）
 > 甲辰，夏后杼元岁。
 > 庚申，十有七岁，王崩，子槐践位。
 
-### 槐
+## 槐
 > 辛酉，夏后槐元岁。
 > 丙戌，二十有六岁，王崩，子芒践位。
 
-### 芒
+## 芒
 > 丁亥，夏后芒元岁。
 > 甲辰，十有八岁，王崩，子泄践位。
 
-### 泄
+## 泄
 > 乙巳，夏后泄元岁，命东夷，命西羌。
 > 庚申，十有六岁，王崩，子不降践位。
 
-### 不降
+## 不降
 > 辛酉，夏后不降元岁。
 > 己未，五十有九岁，王崩，弟扃立。
 
-### 扃
+## 扃
 > 庚申，夏后扃元岁。
 > 庚辰，二十有一岁，王崩，子廑践位。
 
-### 廑（胤甲）
+## 廑（胤甲）
 > 辛巳，夏后廑元岁。
 > 辛丑，二十有一岁，王崩，不降之子孔甲立。
 
-### 孔甲
+## 孔甲
 > 壬寅，夏后孔甲元岁。
 > 甲辰，三岁，采铁铸剑。
 > 戊辰，二十有七岁，商主癸生子履。
 > 主癸之妃扶都，见白气贯月而生汤。
 > 壬申，三十有一岁，王崩，子皋践位。
 
-### 皋
+## 皋
 > 癸酉，夏后皋元岁。
 > 癸未，十有一岁，王崩，子发践位。
 
-### 发
+## 发
 > 甲申，夏后发元岁，诸夷宾于王门。
 > 壬寅，十有九岁，王崩，子癸践位。
 
-### 桀（履癸）
+## 桀（履癸）
 > 癸卯，夏后癸元岁。
 > 甲子，二十有二岁，公刘迁国于豳。后稷封邰，别姓姬氏，至公刘迁于豳。公刘虽在戎、狄之间，复修后稷之业，务耕种，行地宜，自漆、沮渡渭，取材用，行者有资，居者有畜积，民赖其庆，百姓怀之，多从而保归焉。周道之兴自此始。
 > 乙亥，三十有三岁，伐蒙山，有施氏献妹喜，王嬖之。桀能申钩索铁，负恃其力，不务德而武伤百姓。有赵梁者，教为无道，劝以贪狠。伐蒙山有施氏，有施氏进女妹喜，桀嬖之，所言皆听。为之为琼室、象廊、瑶台、玉床，行淫纵乐。为肉山、脯林，酒池可以运舟，一鼓而牛饮者三千人，以为戏剧。
