--- a/_posts/2008-06-06-毕业记.md
+++ b/_posts/2008-06-06-毕业记.md
@@ -1,9 +1,11 @@
 ---
 layout: post
-title: 二零零八年无锡印象
-description: 零八年大学毕业的时候找了家单位，但是要求先得参加他们的培训。之后第一次来到了真正意义上的江南水乡。对无锡有了深刻的印象。
+title: 毕业记
+description: 毕业后的一些记忆
 date: 2021-05-01 05:01:01
 ---
+
+## 二零零八年无锡印象
 
 >  零八年大学毕业的时候找了家单位，但是要求先得参加他们的培训。之后第一次来到了真正意义上的江南水乡。对无锡有了深刻的印象。
 
