--- a/_posts/2022-12-28-读《资治通鉴》札记（十一）.md
+++ b/_posts/2022-12-28-读《资治通鉴》札记（十一）.md
@@ -81,12 +81,11 @@ date: 2022-12-28 15:43:01
 
 <hr/>
 
-> 少帝浸长，自知非皇后子，乃出言曰：“后安能杀吾母而名我！我壮，即为变！”太后闻之，幽之永巷中，言帝病，左右莫得见。太后语群臣曰：“今皇帝病久不已，失惑昏乱，不能继嗣治天下；其代之。”群臣皆顿首言：“皇太后为天下齐民计，所以安宗庙、社稷甚深。群臣顿首奉诏。”遂废帝，幽杀之。五月，丙辰，立恒山王义为帝，更名曰弘，不称元年，以太后制天下事故也。以轵侯朝为恒山王。
+> 少帝浸长，自知非皇后子，乃出言曰：“后安能杀吾母而名我！我壮，即为变！”太后闻之，幽之永巷中，言帝病，遂废帝，幽杀之。
 
-> 是岁，以平阳侯曹窋为御史大夫。
+> 五月，丙辰，立恒山王义为帝，更名曰弘，不称元年，以太后制天下事故也。
 
 > 有司请禁南越关市、铁器。南越王佗曰：“高帝立我，通使物。今高后听谗臣，别异蛮夷，隔绝器物，此必长沙王计，欲倚中国击灭南越而并王之，自为功也。”
-
 
 ### 高皇后五年戊午（前183）
 
@@ -109,40 +108,12 @@ date: 2022-12-28 15:43:01
 
 > 冬，十二月，匈奴寇狄道，略二千馀人。
 
-> 春，正月，太后召赵幽王友。友以诸吕女为后，弗爱，爱他姬。诸吕女怒，去，谗之于太后曰：“王言‘吕氏安得王！太后百岁后，吾必击之。’”太后以故召赵王，赵王至，置邸，不得见，令卫围守之，弗与食；其群臣或窃馈，辄捕论之。丁丑，赵王饿死，以民礼葬之长安民冢次。
-
-> 己丑，日食，昼晦。太后恶之，谓左右曰：“此为我也！”
-
-> 二月，徙梁王恢为赵王，吕王产为梁王。梁王不之国，为帝太傅。
-
-> 秋，七月，丁巳，立平昌侯太为济川王。
-
-> 吕嬃女为将军、营陵侯刘泽妻。泽者，高祖从祖昆弟也。齐人田生为之说大谒者张卿曰：“诸吕之王也，诸大臣未大服。今营陵侯泽，诸刘最长；今卿言太后王之，吕氏王益固矣。”张卿入言太后，太后然之，乃割齐之琅邪郡封泽为琅邪王。
-
-> 赵王恢之徙赵，心怀不乐。太后以吕产女为王后，王后从官皆诸吕，擅权，微伺赵王，赵王不得自恣。王有所爱姬，王后使人鸩杀之。六月，王不胜悲愤，自杀。太后闻之，以为王用妇人弃宗庙礼，废其嗣。
-
-> 是时，诸吕擅权用事。硃虚侯章，年二十，有气力，忿刘氏不得职。尝入侍太后燕饮，太后令章为酒吏。章自请曰：“臣将种也，请得以军法行酒。”太后曰：“可。”酒酣，章请为《耕田歌》，太后许之。章曰：“深耕穊种，立苗欲疏；非其种者，锄而去之！”太后默然。顷之，诸吕有一人醉，亡酒，章追，拔剑斩之而还，报曰：“有亡酒一人，臣谨行法斩之！”太后左右皆大惊，业已许其军法，无以罪也，因罢。自是之后，诸吕惮硃虚侯，虽大臣皆依硃虚侯，刘氏为益强。陈平患诸吕，力不能制，恐祸及己。尝燕居深念，陆贾往，直入坐，而陈丞相不见。陆生曰：“何念之深也！”陈平曰：“生揣我何念？”陆生曰：“足下极富贵，无欲矣；然有忧念，不过患诸吕、少主耳。”陈平曰：“然！为之奈何？”陆生曰：“天下安，注意相；天下危，注意将。将相和调，则士豫附；天下虽有变，权不分。为社稷计，在两君掌握耳。臣常欲谓太尉绛侯，绛侯与我戏，易吾言。君何不交欢太尉，深相结？”因为陈平画吕氏数事。陈平用其计，乃以五百金为绛侯寿，厚具乐饮；太尉报亦如之。两人深相结，吕氏诸益衰。陈平以奴婢百人、车马五十乘、钱五百万遗陆生为饮食费。
-
-> 太后使使告代王，欲徙王赵。代王谢之，愿守代边。太后乃立兄子吕禄为赵王，追尊禄父建成康侯释之为赵昭王。
-
-> 九月，燕灵王建薨，有美人子，太后使人杀之。国除。
-
-> 遣隆虑侯周灶将兵击南越。
-
 
 ### 高皇后八年辛酉（前180）
 
 <hr/>
 
-> 高皇后八年（辛酉，公元前一八零年）
-
-> 冬，十月，辛丑，立吕肃王子东平侯通为燕王，封通弟庄为东平侯。
-
-> 三月，太后礻犮，还，过轵道，见物如苍犬，撠太后掖，忽不复见。卜之，云“赵王如意为祟”。太后遂病掖伤。太后为外孙鲁王偃年少孤弱，夏，四月，丁酉，封张敖前姬两子侈为新都侯，寿为乐昌侯，以辅鲁王。又封中大谒者张释为建陵侯，以其劝王诸吕，赏之也。
-
-> 江、汉水溢，流万馀家。
-
-> 秋，七月，太后病甚，乃令赵王禄为上将军，居北军；吕王产居南军。太后诫产、禄曰：“吕氏之王，大臣弗平。我即崩，帝年少，大臣恐为变。必据兵卫宫，慎毋送丧，为人所制！”辛巳，太后崩，遗诏：大赦天下，以吕王产为相国，以吕禄女为帝后。高后已葬，以左丞相审食其为帝太傅。
+> 秋，七月，太后病甚，乃令赵王禄为上将军，吕王产居南军，诫产、禄曰：“吕氏之王，大臣弗平。我即崩，帝年少，大臣恐为变。必据兵卫宫，慎毋送丧，为人所制！”辛巳，太后崩。
 
 > 诸吕欲为乱，畏大臣绛、灌等，未敢发。硃虚侯以吕禄女为妇，故知其谋，乃阴令人告其兄齐王，欲令发兵西，硃虚侯、东牟侯为内应，以诛诸吕，立齐王为帝。齐王乃与其舅驷钧、郎中令祝午、中尉魏勃阴谋发兵。齐相召平弗听。八月，丙午，齐王欲使人诛相。相闻之，乃发卒卫王宫。魏勃绐召平曰：“王欲发兵，非有汉虎符验也。而相君围王固善，勃请为君将兵卫王。”召平信之。勃既将兵，遂围相府，召平自杀。于是齐王以驷钧为相，魏勃为将军，祝午为内史，悉发国中兵。使祝午东诈琅邪王曰：“吕氏作乱，齐王发兵欲西诛之。齐王自以年少，不习兵革之事，愿举国委大王。大王，自高帝将也。请大王幸之临菑，见齐王计事。”琅邪王信之，西驰见齐王。齐王因留琅邪王，而使祝午尽发琅邪国兵，并将之。琅邪王说齐王曰：“大王，高皇帝適长孙也，当立。今诸大臣狐疑未有所定，而泽于刘氏最为长年，大臣固待泽决计。今大王留臣，无为也，不如使我入关计事。”齐王以为然，乃益具车送琅邪王。琅邪王既行，齐遂举兵西攻济南。遗诸侯王书，陈诸吕之罪，欲举兵诛之。相国吕产等闻之，乃遣颍阴侯灌婴将兵击之。灌婴至荥阳，谋曰：“诸吕拥兵关中，欲危刘氏而自立。今我破齐还报，此益吕氏之资也。”乃留屯荥阳，使使谕齐王及诸侯与连和，以待吕氏变，共诛之。齐王闻之，乃还兵西界待约。
 
@@ -545,54 +516,17 @@ date: 2022-12-28 15:43:01
 
 <hr/>
 
-> 冬，十月，丞相嘉等奏：“功莫大于高皇帝，德莫盛于孝文皇帝。高皇帝庙，宜为帝者太祖之庙；孝文皇帝庙，宜为帝者太宗之庙。天子宜世世献祖宗之庙，郡国诸侯宜各为孝文皇帝立太宗之庙。”制曰：“可。”
-
-> 夏，四月，乙卯，赦天下。
-
-> 遣御史大夫青至代下与匈奴和亲。
-
 > 五月，复收民田半租，三十而税一。
 
 > 初，文帝除肉刑，外有轻刑之名，内实杀人；斩右止者又当死；斩左止者笞五百，当劓者笞三百，率多死。是岁，下诏曰：“加笞、重罪无异；幸而不死，不可为人。其定律：笞五百曰三百，笞三百曰二百。”
 
-> 以太中大夫周仁为郎中令，张欧为廷尉，楚元王子平陆侯礼为宗正，中大夫晁错为左内史。仁始为太子舍人，以廉谨得幸。张欧亦事帝于太子宫，虽治刑名家，为人长者，帝由是重之，用为九卿。欧为吏未尝言按人，专以诚长者处官；官属以为长者，亦不敢大欺。
-
-> 太宗孝文皇帝下二年（丙戌，公元前一五五年）
-
-> 冬，十二月，有星孛于西南。
-
-> 令天下男子年二十始傅。
-
-> 春，三月，甲寅，立皇子德为河间王，阏为临江王，馀为淮阳王，非为汝南王，彭祖为广川王，发为长沙王。
-
-> 夏，四月，壬午，太皇太后薄氏崩。
-
-> 六月，丞相申屠嘉薨。时内史晁错数请间言事，辄听，宠幸倾九卿，法令多所更定。丞相嘉自绌所言不用，疾错。错为内史，东出不便，更穿一门南出。南出者，太上皇庙堧垣也。嘉闻错穿宗庙垣，为奏，请诛错。客有语错，错恐，夜入宫上谒，自归上。至朝，嘉请诛内史错。上曰：“错所穿非真庙垣，乃外耎垣，故冗官居其中；且又我使为之，错无罪。”丞相嘉谢。罢朝，嘉谓长史曰：“吾悔不先斩错乃请之，为错所卖。”至舍，因欧血而死。错以此愈贵。
+### 孝景皇帝二年丙戌（前155）
 
 > 秋，与匈奴和亲。
 
-> 八月，丁未，以御史大夫开封侯陶青为丞相。丁巳，以内史晁错为御史大夫。
-
-> 彗星出东北。
-
-> 秋，衡山雨雹，大者五寸，深者二尺。
-
-> 荧惑逆行守北辰，月出北辰间；岁星逆行天廷中。
-
-> 梁孝王以窦太后少子故，有宠，王四十馀城，居天下膏腴地。赏赐不可胜道，府库金钱且百巨万，珠玉宝器多于京师。筑东苑，方三百馀里，广睢阳城七十里，大治宫室，为复道，自宫连属于平台三十馀里。招延四方豪俊之士，如吴人枚乘、严忌，齐人羊胜、公孙诡、邹阳，蜀人司马相如之属皆从之游。每入朝，上使使持节以乘舆驷马迎梁王于关下。既至，宠幸无比，入则侍上同辇，出则同车，射猎上林中。因上疏请留，且半岁。梁侍中、郎、谒者著籍引出入天子殿门，与汉宦官无异。
-
-
-　起强圉大渊献，尽上章困敦，凡十四年。
-
-> 孝景皇帝下前三年（丁亥，公元前一五四年）
+### 孝景皇帝三年丁亥（前154）
 
 > 冬，十月，梁王来朝。时上未置太子，与梁王宴饮，从容言曰：“千秋万岁后传于王。”王辞谢，虽知非至言，然心内喜，太后亦然。詹事窦婴引卮酒进上曰：“天下者，高祖之天下，父子相传，汉之约也，上何以得传梁王！”太后由此憎婴。婴因病免；太后除婴门籍，不得朝请。梁王以此益骄。
-
-> 春，正月，乙巳，赦。
-
-> 长星出西方。
-
-> 洛阳东宫灾。
 
 > 初，孝文时，吴太子入见，得侍皇太子饮、博。吴太子博争道，不恭；皇太子引博局提吴太子，杀之。遣其丧归葬，至吴，吴王愠曰：“天下同宗，死长安即葬长安，何必来葬为！”复遣丧之长安葬。吴王由此稍失籓臣之礼，称疾不朝。京师知其以子故，系治、验问吴使者；吴王恐，始有反谋。后使人为秋请，文帝复问之，使者对曰：“王实不病；汉系治使者数辈，吴王恐，以故遂称病。夫察见渊中鱼不祥，唯上弃前过，与之更始。”于是文帝乃赦吴使者，归之，而赐吴王几杖，老，不朝。吴得释其罪，谋亦益解。然其居国，以铜、盐故，百姓无赋；卒践更，辄予平贾；岁时存问茂材，赏赐闾里；他郡国吏欲来捕亡人者，公共禁弗予。如此者四十馀年。
 
