--- a/_posts/2022-12-27-礼记札记.md
+++ b/_posts/2022-12-27-礼记札记.md
@@ -807,6 +807,92 @@ date: 2022-12-27 11:44:01
 
 ## 中庸
 
+### 天命之謂性，率性之謂道，修道之謂教。道也者，不可須臾離也，可離非道也。是故君子戒慎乎其所不睹，恐懼乎其所不聞。莫見乎隱，莫顯乎微，故君子慎其獨也。喜怒哀樂之未發，謂之中；發而皆中節，謂之和。中也者，天下之大本也；和也者，天下之達道也。致中和。天地位焉，萬物育焉。
+
+### 仲尼曰：“君子中庸，小人反中庸。君子之中庸也，君子而時中；小人之中庸也，小人而無忌憚也。”
+
+### 子曰：“中庸其至矣乎！民鮮能久矣！”
+
+### 子曰：“道之不行也，我知之矣：知者過之，愚者不及也。道之不明也，我知之矣：賢者過之，不肖者不及也。人莫不飲食也，鮮能知味也。”
+
+### 子曰：“道其不行矣夫！”
+
+### 子曰：“舜其大知也與！舜好問而好察迩言，隱惡而揚善，執其兩端，用其中于民，其斯以為舜乎！”
+
+### 子曰：“人皆曰‘予知’，驅而納諸罟擭陷阱之中，而莫之知辟也。人皆曰‘予知’，擇乎中庸，而不能期月守也。”
+
+### 子曰：“回之為人也，擇乎中庸，得一善則拳拳服膺而弗失之矣。”
+
+### 子曰：“天下國家可均也，爵祿可辭也，白刃可蹈也，中庸不可能也。”
+
+### 子路問強。子曰：“南方之強與？北方之強與？抑而強與？寬柔以教，不報無道，南方之強也，君子居之。衽金革，死而不厭，北方之強也，而強者居之。故君子和而不流，強哉矯！中立而不倚，強哉矯！國有道，不變塞焉，強哉矯！國無道，至死不變，強哉矯！”
+
+### 子曰：“素隱行怪，後世有述焉，吾弗為之矣。君子遵道而行，半途而廢，吾弗能已矣。君子依乎中庸，遁世不見知而不悔，唯聖者能之。君子之道費而隱。夫婦之愚，可以與知焉；及其至也，雖聖人亦有所不知焉。夫婦之不肖，可以能行焉；及其至也，雖聖人亦有所不能焉。天地之大也，人猶有所憾。故君子語大，天下莫能載焉；語小，天下莫能破焉。《詩》雲：“鸢飛戾天，魚躍于淵。’言其上下察也。君子之道，造端乎夫婦；及其至也，察乎天地。”
+
+### 子曰：“道不遠人。人之為道而遠人，不可以為道。《詩》雲：“伐柯伐柯，其則不遠。’執柯以伐柯，睨而視之，猶以為遠。故君子以人治人，改而止。忠恕違道不遠，施諸己而不願，亦勿施于人。君子之道四，丘未能一焉：所求乎子，以事父，未能也；所求乎臣，以事君，未能也；所求乎弟，以事兄，未能也；所求乎朋友，先施之，未能也，庸德之行，庸言之謹；有所不足，不敢不勉，有余不敢盡；言顧行，行顧言，君子胡不慥慥爾！君子素其位而行，不願乎其外。素富貴，行乎富貴；素貧賤，行乎貧賤；素夷狄，行乎夷狄；素患難，行乎患難：君子無入而不自得焉。在上位不陵下，在下位不援上，正己而不求于人，則無怨。上不怨天，下不尤人。故君子居易以俟命，小人行險以僥幸。”
+
+### 子曰：“射有似乎君子；失諸正鹄，反求諸其身。君子之道，辟如行遠必自迩，辟如登高必自卑。《詩》曰：“妻子好合，如鼓瑟琴。兄弟既翕，和樂且耽。宜爾室家，樂爾妻帑。’”子曰：“父母其順矣乎！”
+
+### 子曰：“鬼神之為德，其盛矣乎！視之而弗見，聽之而弗聞，體物而不可遺。使天下之人齊明盛服，以承祭祀，洋洋乎如在其上，如在其左右。《詩》曰：“神之格思，不可度思！矧可射思！’夫微之顯，誠之不可掩如此夫。”
+
+### 子曰：“舜其大孝也與！德為聖人，尊為天子，富有四海之內。宗廟飨之，子孫保之。故大德必得其位，必得其祿，必得其名，必得其壽。故天之生物，必因其材而笃焉。故栽者培之，傾者覆之。《詩》曰：“嘉樂君子，憲憲令德。宜民宜人，受祿于天。保佑命之，自天申之。’故大德者必受命。”
+
+### 子曰：“無憂者，其惟文王乎！以王季為父，以武王為子，父作之，子述之。武王缵大王、王季、文王之緒，壹戎衣而有天下，身不失天下之顯名。
+
+### 尊為天子，富有四海之內。宗廟飨之，子孫保之。武王末受命。週公成文、武之德，追王大王、王季，上祀先公以天子之禮。斯禮也，達乎諸侯大夫，及士庶人。父為大夫，子為士，葬以大夫，祭以士。父為士，子為大夫，葬以士，祭以大夫。期之喪，達乎大夫。三年之喪，達乎天子。父母之喪，無貴賤，一也。”
+
+### 子曰：“武王、週公，其達孝乎！夫孝者，善繼人之志，善述人之事者也。春秋修其祖廟，陳其宗器，設其裳衣，薦其時食。宗廟之禮，所以序昭穆也。序爵，所以辨貴賤也。序事，所以辨賢也，旅酬下為上，所以逮賤也。
+
+### 燕毛，所以序齒也。踐其位，行其禮，奏其樂，敬其所尊，愛其所親，事死如事生，事亡如事存，孝之至也。郊社之禮，所以事上帝也。宗廟之禮，所以祀乎其先也。明乎郊社之禮、禘嘗之義，治國其如示諸掌乎！”
+
+### 哀公問政。子曰：“文、武之政，布在方策。其人存，則其政舉；其人亡，則其政息。人道敏政，地道敏樹。夫政也者，蒲盧也。故為政在人，取人以身，修身以道，修道以仁。仁者人也，親親為大；義者宜也，尊賢為大。
+
+### 親親之殺，尊賢之等，禮所生也。在下位不獲乎上，民不可得而治矣！故君子不可以不修身；思修身，不可以不事親；思事親，不可以不知人；思知人，不可以不知天。”
+
+### “天下之達道五，所以行之者三。曰：君臣也，父子也，夫婦也，昆弟也，朋友之交也，五者天下之達道也。知，仁，勇，三者天下之達德也，所以行之者一也。或生而知之，或學而知之，或因而知之；及其知之，一也。
+
+### 或安而行之，或利而行之，或勉強而行之；及其成功，一也。”子曰：“好學近乎知，力行近乎仁，知恥近乎勇。知斯三者，則知所以修身；知所以修身，則知所以治人；知所以治人，則知所以治天下國家矣。”
+
+### “凡為天下國家有九經，曰：修身也，尊賢也，親親也，敬大臣也，體群臣也，子庶民也，來百工也，柔遠人也，懷諸侯也。修身則道立，尊賢則不惑，親親則諸父昆弟不怨，敬大臣則不眩，體群臣則士之報禮重，子庶民則百姓勸，來百工則財用足，柔遠人則四方歸之，懷諸侯則天下畏之。齊明盛服，非禮不動，所以修身也；去讒遠色，賤貨而貴德，所以勸賢也；尊其位，重其祿，同其好惡，所以勸親親也；官盛任使，所以勸大臣也；忠信重祿，所以勸士也，時使薄斂，所以勸百姓也；日省月試，既廪稱事，所以勸百工也；送往迎來，嘉善而矜不能，所以柔遠人也；繼絕世，舉廢國，治亂持危，朝聘以時，厚往而薄來，所以懷諸侯也。”
+
+### “凡為天下國家有九經，所以行之者一也。凡事豫則立，不豫則廢。言前身定則不跲，事前定則不困，行前定則不疚，道前定則不窮。
+
+### “在下位不獲乎上，民不可得而治矣；獲乎上有道：不信乎朋友，不獲乎上矣；信乎朋友有道：不順乎親，不信乎朋友矣；順乎親有道：反諸身不誠，不順乎親矣；誠身有道：不明乎善，不誠乎身矣。誠者，天之道也；誠之者，人之道也。誠者不勉而中，不思而得，從容中道，聖人也。誠之者，擇善而固執之者也。
+
+### “博學之，審問之，慎思之，明辨之，笃行之。有弗學，學之弗能，弗措也；有弗問，問之弗知，弗措也；有弗思，思之弗得，弗措也；有弗辨，辨之弗明，弗措也；有弗行，行之弗笃，弗措也。人一能之己百之，人十能之己千之。果能此道矣，雖愚必明，雖柔必強。
+
+### “自誠明，謂之性。自明誠，謂之教。誠則明矣，明則誠矣。唯天下至誠，為能盡其性；能盡其性；則能盡人之性；能盡人之性，則能盡物之性；能盡物之性，則可以贊天地之化育；可以贊天地之化育，則可以與天地參矣。
+
+### “其次致曲。曲能有誠，誠則形，形則著，著則明，明則動，動則變，變則化。唯天下至誠為能化。
+
+### “至誠之道，可以前知。國家將興，必有祯祥。國家將亡，必有妖孽。
+
+### 見乎蓍龜，動乎四體，禍福將至：善，必先知之；不善，必先知之。故至誠如神。
+
+### “誠者，自成也；而道，自道也。誠者，物之終始，不誠無物。是故君子誠之為貴。誠者，非自成己而已也，所以成物也。成己，仁也；成物，知也。性之德也，合外內之道也，故時措之宜也。
+
+### “故至誠無息。不息則久，久則徵，徵則悠遠，悠遠則博厚，博厚則高明。博厚，所以載物也；高明，所以覆物也；悠久，所以成物也。博厚配地，高明配天，悠久無疆。如此者，不見而章，不動而變，無為而成。天地之道，可壹言而盡也。其為物不貳，則其生物不測。天地之道，博也，厚也，高也，明也，悠也，久也。
+
+### “今夫天，斯昭昭之多，及其無窮也，日月星辰系焉，萬物覆焉。今夫地，一撮土之多，及其廣厚，載華嶽而不重，振河海而不泄，萬物載焉。今夫山，一卷石之多，及其廣大，草木生之，禽獸居之，寶藏興焉。今夫水，一勺之多，及其不測，鼋鼍、蛟龍、魚鼈生焉，貨財殖焉。《詩》曰：“惟天之命，于穆不已！’蓋曰天之所以為天也。‘于乎不顯，文王之德之純！’蓋曰文王之所以為文也，純亦不已。
+
+### “大哉聖人之道！洋洋乎發育萬物，峻極于天。優優大哉！禮儀三百，威儀三千，待其人然後行。故曰：苟不至德，至道不凝焉。故君子尊德性而道問學，致廣大而盡精微，極高明而道中庸；溫故而知新，敦厚以崇禮。是故居上不驕，為下不倍；國有道，其言足以興；國無道，其默足以容。《詩》曰：“既明且哲，以保其身。’其此之謂與！”
+
+### 子曰：“愚而好自用，賤而好自專；生乎今之世，反古之道。如此者，烖及其身者也。”非天子，不議禮，不制度，不考文。今天下車同軌，書同文，行同倫。雖有其位，苟無其德，不敢作禮樂焉；雖有其德，苟無其位，亦不敢作禮樂焉。
+
+### 子曰：“吾說夏禮，杞不足征也。吾學殷禮，有宋存焉。吾學週禮，今用之，吾從週。
+
+### “王天下有三重焉，其寡過矣乎！上焉者雖善無征，無征不信，不信民弗從；下焉者雖善不尊，不尊不信，不信民弗從。故君子之道，本諸身，征諸庶民，考諸三王而不缪，建諸天地而不悖，質諸鬼神而無疑，百世以俟聖人而不惑。質諸鬼神而無疑，知天也；百世以俟聖人而不惑，知人也。是故君子動而世為天下道，行而世為天下法，言而世為天下則。遠之則有望，近之則不厭。《詩》曰：“在彼無惡，在此無射，庶幾夙夜，以永終譽！’君子未有不如此而早有譽于天下者也。”
+
+### 仲尼祖述堯、舜，憲章文、武；上律天時，下襲水土。辟如天地之無不持載，無不覆帱；辟如四時之錯行，如日月之代明。萬物並育而不相害，道並行而不相悖。小德川流，大德敦化。此天地之所以為大也。
+
+### 唯天下至聖為能聰明睿知，足以有臨也；寬裕溫柔，足以有容也；發強剛毅，足以有執也；齊莊中正，足以有敬也；文理密察，足以有別也。溥博淵泉，而時出之。溥博如天，淵泉如淵。見而民莫不敬，言而民莫不信，行而民莫不說。是以聲名洋溢乎中國，施及蠻貊。舟車所至，人力所通；天之所覆，地之所載；日月所照，霜露所隊。凡有血氣者，莫不尊親，故曰配天。
+
+### 唯天下至誠，為能經綸天下之大經，立天下之大本，知天地之化育。夫焉有所倚？肫肫其仁！淵淵其淵！浩浩其天！苟不固聰明聖知這天德者，其孰能知之？
+
+### 《詩》曰：“衣錦尚絧，惡其文之著也。故君子之道，暗然而日章；小人之道，的然而日亡。君子之道：淡而不厭，簡而文，溫而理，知遠之近，知風之自，知微之顯，可與入德矣。《詩》雲：“潛雖伏矣，亦孔之昭！”
+
+### 故君子內省不疚，無惡于志。君子所不可及者，其唯人之所不見乎！《詩》雲：“相在爾室，尚不愧于屋漏。”故君子不動而敬，不言而信。《詩》曰：“奏假無言，時靡有爭。”是故君子不賞而民勸，不怒而民威于鐵钺。《詩》曰：“不顯惟德，百辟其刑之。”是故君子笃恭而天下平。《詩》曰：“予懷明德，不大聲以色。”子曰：“聲色之于以化民，末也。”《詩》曰：“德輶如毛，毛猶有倫：“上天之載，無聲無臭”，至矣！
+
 君子戒慎乎其所不睹，恐惧乎其所不闻。莫见乎隐，莫显乎微。故君子慎其独也①。
 ①慎其独：郑注：“慎其闲居之所为。”即闲暇独处时的所作所为要审慎。
 > 君子在人们看不见的地方也警戒谨慎，在人们听不见的地方也畏惧小心。没有比隐秘的地方更容易暴露了，没有比细微的事物更容易显现了。所以君子在闲暇独处时也非常审慎。
@@ -1054,6 +1140,32 @@ date: 2022-12-27 11:44:01
 > 温厚善良，是仁的根本。恭敬谨慎，是仁的基础。宽容大度，是仁的动作。谦逊接物，是仁的能力。礼节仪 ，是仁的外貌。言语谈吐，是仁的文采。歌舞喜乐，是仁的和悦。分财济贫，是仁的施恩。
 
 ## 大学
+
+### 大學之道。在明明德。在親民。在止於至善。知止而後有定。定而後能靜。靜而後能安。安而後能慮。慮而後能得。物有本末。事有終始。知所先後。則近道矣。古之欲明明德於天下者。先治其國。欲治其國者。先齊其家。欲齊其家者。先修其身。欲修其身者。先正其心。欲正其心者。先誠其意。欲誠其意者。先致其知。致知在格物。物格而後知至。知至而後意誠。意誠而後心正。心正而後身修。身修而後家齊。家齊而後國治。國治而後天下平。自天子以至於庶人。壹是皆以修身為本。其本亂而末治者否矣。其所厚者薄。而其所薄者厚。未之有也。 
+
+### 康誥曰。克明德。大甲曰。顧諟天之明命。帝典曰。克明峻德。皆自明也。 
+
+### 湯之盤銘曰。苟日新。日日新。又日新。康誥曰。作新民。詩曰。周雖舊邦。其命惟新。是故君子無所不用其極。 
+
+### 詩云。邦畿千里。惟民所止。詩云。緡蠻黃鳥。止於丘隅。子曰。於止。知其所止。可以人而不如鳥乎。詩云。穆穆文王。於緝熙敬止。為人君。止於仁。為人臣。止於敬。為人子。止於孝。為人父。止於慈。與國人交。止於信。詩云。瞻彼淇澳。菉竹猗猗。有斐君子。如切如磋。如琢如磨。瑟兮僩兮。赫兮喧兮。有斐君子。終不可諠兮。如切如磋者。道學也。如琢如磨者。自修也。瑟兮僩兮者。恂栗也。赫兮喧兮者。威儀也。有斐君子。終不可諠兮者。道盛德至善。民之不能忘也。詩云。於戲前王不忘。君子賢其賢而親其親。小人樂其樂而利其利。此以沒世不忘也。 
+
+### 子曰。聽訟。吾猶人也。必也使無訟乎。無情者不得盡其辭。大畏民志。此謂知本。 
+
+### 此謂知本。此謂知之至也。 
+
+### 所謂致知在格物者。言欲致吾之知。在即物而窮其理也。蓋人心之靈莫不有知。而天下之物莫不有理。惟於理有未窮。故其知有不盡也。是以大學始教。必使學者即凡天下之物。莫不因其已知之理而益窮之。以求至乎其極。至於用力之久。而一旦豁然貫通焉。則眾物之表裏精粗無不到。而吾心之全體大用無不明矣。此謂物格。此謂知之至也。 
+
+### 所謂誠其意者。毋自欺也。如惡惡臭。如好好色。此之謂自謙。故君子必慎其獨也。小人閒居為不善。無所不至。見君子而後厭然。揜其不善。而著其善。人之視己。如見其肺肝然。則何益矣。此謂誠於中。形於外。故君子必慎其獨也。曾子曰。十目所視。十手所指。其嚴乎。富潤屋。德潤身。心廣體胖。故君子必誠其意。 
+
+### 所謂修身在正其心者。身有所忿懥。則不得其正。有所恐懼。則不得其正。有所好樂。則不得其正。有所憂患。則不得其正。心不在焉。視而不見。聽而不聞。食而不知其味。此謂修身在正其心。 
+
+### 所謂齊其家在修其身者。人之其所親愛而辟焉。之其所賤惡而辟焉。之其所畏敬而辟焉。之其所哀矜而辟焉。之其所敖惰而辟焉。故好而知其惡。惡而知其美者。天下鮮矣。故諺有之曰。人莫知其子之惡。莫知其苗之碩。此謂身不修不可以齊其家。 
+
+### 所謂治國必先齊其家者。其家不可教而能教人者。無之。故君子不出家而成教於國。孝者。所以事君也。弟者。所以事長也。慈者，所以使眾也。康誥曰。如保赤子。心誠求之。雖不中不遠矣。未有學養子而後嫁者也。一家仁。一國興仁。一家讓。一國興讓。一人貪戾。一國作亂。其機如此。此謂一言僨事。一人定國。堯舜帥天下以仁。而民從之。桀紂帥天下以暴。而民從之。其所令反其所好。而民不從。是故君子有諸己而後求諸人。無諸己而後非諸人。所藏乎身不恕。而能喻諸人者。未之有也。故治國在齊其家。詩云。桃之夭夭。其葉蓁蓁。之子於歸。宜其家人。宜其家人。而後可以教國人。詩云。宜兄宜弟。宜兄宜弟。而後可以教國人。詩云。其儀不忒。正是四國。其為父子兄弟足法。而後民法之也。此謂治國在齊其家。 
+
+### 所謂平天下在治其國者。上老老而民興孝。上長長而民興弟。上恤孤而民不倍。是以君子有絜矩之道也。所惡於上。毋以使下。所惡於下。毋以事上。所惡於前。毋以先後。所惡於後。毋以從前。所惡於右。毋以交於左。所惡於左。毋以交於右。此之謂絜矩之道。詩云。樂只君子。民之父母。民之所好好之。民之所惡惡之。此之謂民之父母。詩云。節彼南山。維石岩岩。赫赫師尹。民具爾瞻。有國者不可以不慎。辟則為天下僇矣。詩云。殷之未喪師。克配上帝。儀監於殷，峻命不易。道得眾則得國。失眾則失國。 
+
+### 是故君子先慎乎德。有德此有人。有人此有土。有土此有財。有財此有用。德者本也。財者末也。外本內末，爭民施奪。是故財聚則民散。財散則民聚。是故言悖而出者。亦悖而入。貨悖而入者。亦悖而出。康誥曰。惟命不於常。道善則得之。不善則失之矣。楚書曰。楚國無以為寶。惟善以為寶。舅犯曰。亡人無以為寶。仁親以為寶。秦誓曰。若有一個臣。斷斷兮無他技。其心休休焉。其如有容焉。人之有技。若己有之。人之彥聖。其心好之。不啻若自其口出。寔能容之。以能保我子孫黎民。尚亦有利哉。人之有技。媢疾以惡之。人之彥聖。而違之俾不通。寔不能容。以不能保我子孫黎民。亦曰殆哉。唯仁人放流之。迸諸四夷。不與同中國。此謂唯仁人為能愛人。能惡人。見賢而不能舉。舉而不能先。命也。見不善而不能退。退而不能遠。過也。好人之所惡。惡人之所好。是謂拂人之性。菑必逮夫身。是故君子有大道。必忠信以得之。驕泰以失之。生財有大道。生之者眾。食之者寡。為之者疾。用之者舒。則財恒足矣。仁者以財發身。不仁者以身發財。未有上好仁而下不好義者也。未有好義其事不終者也。未有府庫財非其財者也。孟獻子曰。畜馬乘不察於雞豚。伐冰之家不畜牛羊。百乘之家不畜聚斂之臣。與其有聚斂之臣。寧有盜臣。此謂國不以利為利。以義為利也。長國家而務財用者。必自小人矣。彼為善之。小人之使為國家。災害並至。雖有善者。亦無如之何矣。此謂國不以利為利。以義為利也。 
 
 大学之道①，在明明德②，在亲民③，在止于至善。
 ①大学：据郑玄《礼记目录》之说，“大学”是“博学”的意思。朱熹说：“大学者，大人之学也。”即广博地学习。
