--- a/_posts/2022-12-29-中国文学名著.md
+++ b/_posts/2022-12-29-中国文学名著.md
@@ -5,15 +5,9 @@ description: 读《中国文学名著》札记
 date: 2022-12-28 13:58:01
 ---
 
-# 中国文学名著
-
-
 ## 小说
 
 ### 中国古典十大名著
-
-```
-```
 
 #### 红楼梦（又名《石头记》） （清） 曹雪芹；
 
@@ -40,9 +34,6 @@ date: 2022-12-28 13:58:01
 #### 《烈女传》（西汉）刘向
 
 #### 《搜神记》 （晋）干宝
-
-```
-```
 
 #### 《太平广记》（宋）李昉﹑扈蒙﹑李穆等
 
@@ -86,9 +77,6 @@ date: 2022-12-28 13:58:01
 
 #### 《小五义》石玉昆
 
-```
-```
-
 #### 《济公全传》郭小亭
 
 #### 《说岳全传》钱彩
@@ -113,9 +101,6 @@ date: 2022-12-28 13:58:01
 
 #### 《啼笑因缘》张恨水
 
-```
-```
-
 #### 《金粉世家》 张恨水
 
 #### 《前汉通俗演义》蔡东藩----还包括《后汉通俗演义》、《两晋通俗演义》、《南北史通俗演义》、《唐史通俗演义》、《五代史通俗演义》、《宋史通俗演义》、《元史通俗演义》、《明史通俗演义》、《清史通俗演义》、《民国通俗演义》(部分)。
@@ -135,13 +120,11 @@ date: 2022-12-28 13:58:01
 
 #### 《幻灭》、《追求》、《动摇》（蚀·三部曲）矛盾
 
-```
-```
-
 #### 《林家铺子》 茅盾
 
 #### 《边城》沈从文
-《边城》：把那种原始自然的纯美的爱情寄托在一块世外桃源中，那种爱情就像阳光下的花朵一样，一种优美、健康、自然而又不悖乎人性的人生形式……
+
+> 《边城》：把那种原始自然的纯美的爱情寄托在一块世外桃源中，那种爱情就像阳光下的花朵一样，一种优美、健康、自然而又不悖乎人性的人生形式……
 
 
 #### 《四世同堂》老舍
@@ -157,8 +140,8 @@ date: 2022-12-28 13:58:01
 #### 《药》鲁迅
 
 #### 《围城》钱钟书
-是钱钟书所著的长篇小说，是中国现代文学史上一部风格独特的讽刺小说。被誉为“新儒林外史”。第一版于1947年由上海晨光出版公司出版。故事主要写抗战初期知识分子的群相。
-《围城》：婚姻就像一座围城，城外的人想进来，城里的人想出去。进来的人，个中玩味局中人才知，出去的人，满腹酸甜非过来人才懂……
+
+> 是钱钟书所著的长篇小说，是中国现代文学史上一部风格独特的讽刺小说。被誉为“新儒林外史”。第一版于1947年由上海晨光出版公司出版。故事主要写抗战初期知识分子的群相。《围城》：婚姻就像一座围城，城外的人想进来，城里的人想出去。进来的人，个中玩味局中人才知，出去的人，满腹酸甜非过来人才懂……
 
 #### 《呼兰河传》萧红
 
@@ -172,49 +155,47 @@ date: 2022-12-28 13:58:01
 
 #### 《死水微澜》李劼人
 
-```
-```
-
 #### 《倪焕之》叶圣陶
 
 ### 现当代小说《红岩》罗广斌、杨益言
 
 #### 《尘埃落定》阿来
-小说描写一个声势显赫的康巴藏族土司，在酒后和汉族太太生了一个傻瓜儿子。这个人人都认定的傻子与现实生活格格不入，但却有超时代的预感和举止，并成为土司制度兴衰的见证人。小说展现了独特的藏族风情及土司制度的浪漫和神秘。
+
+> 小说描写一个声势显赫的康巴藏族土司，在酒后和汉族太太生了一个傻瓜儿子。这个人人都认定的傻子与现实生活格格不入，但却有超时代的预感和举止，并成为土司制度兴衰的见证人。小说展现了独特的藏族风情及土司制度的浪漫和神秘。
 
 #### 《平凡的世界》路遥
-它好像就发生在我们身边，悄无声息的改变着我们的人生观、价值观和爱情观。在这平凡的世界里，那些绚丽的生命之花正在悄然地开放而并不为我们所知，平凡的世界令人感动，平凡的事和平凡的爱情，只要我们认真对待，积极对待，就不再平凡……
+
+> 它好像就发生在我们身边，悄无声息的改变着我们的人生观、价值观和爱情观。在这平凡的世界里，那些绚丽的生命之花正在悄然地开放而并不为我们所知，平凡的世界令人感动，平凡的事和平凡的爱情，只要我们认真对待，积极对待，就不再平凡……
 
 
 
 #### 《活着》余华
-是作家余华的代表作之一，讲诉了在大时代背景下，随着内战、三反五反，大跃进，文化大革命等社会变革，徐福贵的人生和家庭不断经受着苦难，到了最后所有亲人都先后离他而去，仅剩下年老的他和一头老牛相依为命。
+
+> 是作家余华的代表作之一，讲诉了在大时代背景下，随着内战、三反五反，大跃进，文化大革命等社会变革，徐福贵的人生和家庭不断经受着苦难，到了最后所有亲人都先后离他而去，仅剩下年老的他和一头老牛相依为命。
+
 #### 《许三观卖血记》余华
 
 #### 《张居正》熊召政
 
 #### 《穆斯林的葬礼》霍达
-```
-爱情以及人性中美好的东西是可以超越宗教和种族的，虽然在现实中经常会被扼杀，而正因为现实的残酷，才越发觉得这些东西的珍贵。一道门，隔着两个世界。当她的爱情来临的时候，她的生命已经开始一点点的走向终点……
-```
-#### 《青春之歌》杨沫
 
-```
-```
+> 爱情以及人性中美好的东西是可以超越宗教和种族的，虽然在现实中经常会被扼杀，而正因为现实的残酷，才越发觉得这些东西的珍贵。一道门，隔着两个世界。当她的爱情来临的时候，她的生命已经开始一点点的走向终点……
+
+#### 《青春之歌》杨沫
 
 #### 《男人的一半是女人》张贤亮
 
 #### 《白鹿原》陈忠实
-在抵挡不住的历史潮流下，在一个村庄和一片麦田地里发生的爱恨情仇。三个女性分别演绎了为结婚而结婚、为本能爱情而结婚和为某种崇高目标而结婚三种模式。从中也可窥见，生在那个年代里的爱情，是多么难以言说……
-#### 《沉重的翅膀》张洁
 
-```
-```
+> 在抵挡不住的历史潮流下，在一个村庄和一片麦田地里发生的爱恨情仇。三个女性分别演绎了为结婚而结婚、为本能爱情而结婚和为某种崇高目标而结婚三种模式。从中也可窥见，生在那个年代里的爱情，是多么难以言说……
+
+#### 《沉重的翅膀》张洁
 
 #### 《丰乳肥臀》莫言
 
 #### 《红高粱》莫言
-是中国作家莫言创作的长篇小说。《红高粱》以抗日战争及20世纪30、40年代高密东北乡的民间生活为背景，故事中塑造的一系列的抗日英雄却都是正义和邪恶的化身。主人公余占鳌是一个热血汉子，身体里面充满了正义与野蛮。
+
+> 是中国作家莫言创作的长篇小说。《红高粱》以抗日战争及20世纪30、40年代高密东北乡的民间生活为背景，故事中塑造的一系列的抗日英雄却都是正义和邪恶的化身。主人公余占鳌是一个热血汉子，身体里面充满了正义与野蛮。
 
 #### 《酒国》莫言
 
@@ -222,9 +203,7 @@ date: 2022-12-28 13:58:01
 
 #### 《废都》贾平凹
 
-
-《废都》：现代都市的金瓶梅，被禁17年，却是作者认定唯一能安妥他灵魂的书，所有人物均落下了可悲的下场，唯有那一座孤独的古城在世纪末慢慢的荒废，慢慢的荒废……
-
+> 《废都》：现代都市的金瓶梅，被禁17年，却是作者认定唯一能安妥他灵魂的书，所有人物均落下了可悲的下场，唯有那一座孤独的古城在世纪末慢慢的荒废，慢慢的荒废……
 
 #### 《浮躁》贾平凹
 
@@ -240,24 +219,14 @@ date: 2022-12-28 13:58:01
 
 #### 《城南旧事》林海音
 
-```
-```
-
 #### 《财主底儿女们》路翎
-
-```
-```
 
 #### 《芙蓉镇》古华
 
-```
-```
-
 #### 《长恨歌》王忆安
-```
-上海都市爱情精神史，一个女人一生的情与爱，被时代的变迁和男人的轮换交错编织着。三个男人分别涤荡着她的少年、中年和老年，每个人都留下了承诺，但每个人走了都没有回来，而第一个给她照相的男人，一生陪伴和牵挂，却没有得到她，也没有得到她的心……
-上海都市爱情精神史，一个女人一生的情与爱，被时代的变迁和男人的轮换交错编织着。三个男人分别涤荡着她的少年、中年和老年，每个人都留下了承诺，但每个人走了都没有回来，而第一个给她照相的男人，一生陪伴和牵挂，却没有得到她，也没有得到她的心……
-```
+
+> 上海都市爱情精神史，一个女人一生的情与爱，被时代的变迁和男人的轮换交错编织着。三个男人分别涤荡着她的少年、中年和老年，每个人都留下了承诺，但每个人走了都没有回来，而第一个给她照相的男人，一生陪伴和牵挂，却没有得到她，也没有得到她的心……
+> 上海都市爱情精神史，一个女人一生的情与爱，被时代的变迁和男人的轮换交错编织着。三个男人分别涤荡着她的少年、中年和老年，每个人都留下了承诺，但每个人走了都没有回来，而第一个给她照相的男人，一生陪伴和牵挂，却没有得到她，也没有得到她的心……
 
 #### 《棋王》阿城
 
