--- a/_posts/2022-03-03-中华简史_史前.md
+++ b/_posts/2022-03-03-中华简史_史前.md
@@ -6,140 +6,229 @@ description: 史前时期多以传说为主，但不可不信。
 ---
 
 ## 概述
-```
-人或言三皇五帝乃神话中人物，不存在，而予以为三皇五帝乃真人，后世传诵不断夸大而神话。这些上古首领的传承顺序家族关系也不一定正确。
-原始社会时期，部落首领应当是能者当之，部落方可发展壮大，应对外敌入侵。
-上古领袖动辄在位五十年，上百年的，有些人是因为流传过程中父子或者几代领袖被视为一人，所以一些上古领袖可以视为数代领袖。
-鉴于以上观点，禅让制理应存在，但是领袖之间也应存在暴力夺权之实，儒家对次过渡美化，我们应当谨慎对待尧舜禹的禅让。
-```
+
+> 人或言三皇五帝乃神话中人物，不存在，而予以为三皇五帝乃真人，后世传诵不断夸大而神话。这些上古首领的传承顺序家族关系也不一定正确。
+
+> 原始社会时期，部落首领应当是能者当之，部落方可发展壮大，应对外敌入侵。鉴于以上观点，禅让制理应存在，但是领袖之间也应存在暴力夺权之实，儒家对次过渡美化，我们应当谨慎对待尧舜禹的禅让。
+
+> 上古领袖动辄在位五十年，上百年的，有些人是因为流传过程中父子或者几代领袖被视为一人，所以一些上古领袖可以视为数代领袖。
+
+> 母系社会应该是不存在的，首先妇女在体力上就不占优势，很难取得领袖地位。尤其是原始社会努力社会各方面竞争激烈，没有体力肯定是不行了，再加上妇女哺乳期体制更差不大可能。母系社会盖附会男女平等之说。
+
+> 所谓上古姓氏以女字旁，以证母系氏族社会存在，也不大可能。姓氏以女盖一夫多妻自古有之，取姓氏自是为了区别母亲。
+
+> 自周以后实行封分，地名与上古地名变化甚大，因此不能完全以周以后之地名去解释周以前之地名。
+
+> 古之纪年，帝王之年轻盖不可取，因此不书。
+
+
 ## 三皇 
-```
-三皇时代人类由对天地的恐惧和信仰，逐步转换到英雄人物的信仰，这些英雄人物领导人们进行生产以及与自然的斗争，人类逐渐适应了各种各样的环境。
-```
+
+> 三皇时代人类由对天地的恐惧和信仰，逐步转换到英雄人物的信仰，这些英雄人物领导人们进行生产以及与自然的斗争，人类逐渐适应了各种各样的环境。
+
 ## 盘古氏
-盘古氏盖上古第一人，或为中华氏族已知之始祖。
+
+> 盘古氏盖上古第一人，或为中华氏族已知之始祖。后人以盘古开天辟地，盖自夸大尔。
 
 ## 天皇氏，
-天皇氏继盘古氏以治。澹泊无为而俗自化。始制干支之名，以定岁之所在，十干曰阏逢、旃蒙、柔兆、强圉、著雍、屠维、上章、重光、玄黓、昭阳。十二支曰困敦、赤奋若、摄提格、单阏、执徐、大荒落、敦牂、协洽、涒滩、作噩、阉茂、大渊献。
+
+> 天皇氏继盘古氏以治。澹泊无为而俗自化。始制干支之名，以定岁之所在，十干曰阏逢、旃蒙、柔兆、强圉、著雍、屠维、上章、重光、玄黓、昭阳。十二支曰困敦、赤奋若、摄提格、单阏、执徐、大荒落、敦牂、协洽、涒滩、作噩、阉茂、大渊献。
 
 ## 地皇氏，
-地皇氏继天皇氏以治。爰定三辰，是分昼夜，以三十日为一月。兄弟各一万八千岁。人皇氏，继地皇氏以治。相厥山川，分为九区，人居一方，故又曰居方氏。当是时也，万物群生，淳风沕穆，主不虚王，臣不虚贵，政教君臣所自起，饮食男女所自始。
+
+> 地皇氏继天皇氏以治。爰定三辰，是分昼夜，以三十日为一月。兄弟各一万八千岁。人皇氏，继地皇氏以治。相厥山川，分为九区，人居一方，故又曰居方氏。当是时也，万物群生，淳风沕穆，主不虚王，臣不虚贵，政教君臣所自起，饮食男女所自始。
 
 ## 人皇氏，
-人皇氏具体不详，不过可以肯定，三皇都是部落领袖。
-德王，都陈，太昊之母居于华胥之渚，生帝于成纪，风姓。太昊始作网罟，以佃以渔，以赡民用，故曰伏羲氏。养牺牲，以充庖厨，故又曰庖牺氏。
-太昊德合上下，天应以鸟兽文章，地应以龙马负图，于是仰观象于天，俯观法于地，中观万物之宜，始画八卦。卦有三爻，因而重之为卦六十有四，以通神明之德。作书契，以代结绳之政。书制有六：一曰象形；二曰假借；三曰指事；四曰会意；五曰转注；六曰谐声。使天下义理必归文字，天下文字必归六书
+
+> 人皇氏具体不详，不过可以肯定，三皇都是部落领袖。
+
+> 德王，都陈，太昊之母居于华胥之渚，生帝于成纪，风姓。太昊始作网罟，以佃以渔，以赡民用，故曰伏羲氏。养牺牲，以充庖厨，故又曰庖牺氏。
+
+> 太昊德合上下，天应以鸟兽文章，地应以龙马负图，于是仰观象于天，俯观法于地，中观万物之宜，始画八卦。卦有三爻，因而重之为卦六十有四，以通神明之德。作书契，以代结绳之政。书制有六：一曰象形；二曰假借；三曰指事；四曰会意；五曰转注；六曰谐声。使天下义理必归文字，天下文字必归六书
 
 ## 有巢氏构木为巢。
-有巢氏作，构木为巢，教民居之，以避其害。未知稼穑，食草木之实。未有火化，饮禽兽之血而茹其毛。先取其皮蔽前，后取而蔽后。号曰有巢氏之民。
-燧人氏。燧人氏作，观星辰而察五行，知空有火，丽木则明，于是钻木取火，教民以烹饪，而民利之，故号燧人氏。以为燧者，火之所生也，乃别五木以改火，顺四时而遂天之意，由是火之功用洽矣。时未有文字，燧人氏始作结绳之政。
+
+> 有巢氏作，构木为巢，教民居之，以避其害。未知稼穑，食草木之实。未有火化，饮禽兽之血而茹其毛。先取其皮蔽前，后取而蔽后。号曰有巢氏之民。
+
+> 燧人氏。燧人氏作，观星辰而察五行，知空有火，丽木则明，于是钻木取火，教民以烹饪，而民利之，故号燧人氏。以为燧者，火之所生也，乃别五木以改火，顺四时而遂天之意，由是火之功用洽矣。时未有文字，燧人氏始作结绳之政。
 
 ## 五帝，始有五行交替
-```
-五帝时代部族逐渐壮大，人们也不过是从自然中间区获取生产资料，而是通过对其他部族进行战争和掠夺。这时候部族领袖更进一步神话了，并且通过战争掠夺促进了不同部落之间的融合和生产力进一步进步。
-```
+
+> 五帝时代部族逐渐壮大，人们也不过是从自然中间区获取生产资料，而是通过对其他部族进行战争和掠夺。这时候部族领袖更进一步神话了，并且通过战争掠夺促进了不同部落之间的融合和生产力进一步进步。
+
 ## 太昊
-太昊伏羲氏，以木德王，都陈，太昊之母居于华胥之渚，生帝于成纪，风姓。太昊始作网罟，以佃以渔，以赡民用，故曰伏羲氏。养牺牲，以充庖厨，故又曰庖牺氏。
-太昊德合上下，天应以鸟兽文章，地应以龙马负图，于是仰观象于天，俯观法于地，中观万物之宜，始画八卦。卦有三爻，因而重之为卦六十有四，以通神明之德。作书契，以代结绳之政。书制有六：一曰象形；二曰假借；三曰指事；四曰会意；五曰转注；六曰谐声。使天下义理必归文字，天下文字必归六书。
-作甲历，定四时，起于甲寅，支、干相配为十二辰，六甲而天道周矣。岁以是纪而年不乱，月以是纪而时不易，昼夜以是纪而人知度，东西南北以是纪而方不惑。
-制嫁，上古男女无别，太昊始制嫁娶，以俪皮为礼。正姓氏，通媒妁，以重人伦之本，而民始不渎。
-以龙纪官，太昊时有龙马负图出于河之瑞，因而名官，始以龙纪，号曰龙师。命朱襄为飞龙氏，造书契；昊英为潜龙氏，造甲历；大庭为居龙氏，治屋庐；浑沌为降龙氏，驱民害；阴康为土龙氏，治田里；栗陆为水龙氏，繁滋草木，疏导泉源。又命五官：春官为青龙氏，又曰苍龙；夏官为赤龙氏；秋官为白龙氏；冬官为黑龙氏；中官为黄龙氏。于是共工为上相，柏皇为下相，朱襄、昊英常居左右，栗陆居北，赫胥居南，昆连居西，葛天居东，阴康居下，分理宇内，而政化大洽。
-造琴瑟，太昊作荒乐，歌扶徕，咏网罟，以镇天下之人，命曰立基。斫桐为琴，绳丝为弦。弦二十有七，命之曰离徽，以通神明之贶，以合天人之和。桑为三十六弦之瑟，以修身理性，反其天真，而乐音自是兴焉。
-帝崩，葬于陈，神农氏继世践位。
+
+> 太昊伏羲氏，以木德王，都陈，太昊之母居于华胥之渚，生帝于成纪，风姓。太昊始作网罟，以佃以渔，以赡民用，故曰伏羲氏。养牺牲，以充庖厨，故又曰庖牺氏。
+
+> 太昊德合上下，天应以鸟兽文章，地应以龙马负图，于是仰观象于天，俯观法于地，中观万物之宜，始画八卦。卦有三爻，因而重之为卦六十有四，以通神明之德。作书契，以代结绳之政。书制有六：一曰象形；二曰假借；三曰指事；四曰会意；五曰转注；六曰谐声。使天下义理必归文字，天下文字必归六书。
+
+> 作甲历，定四时，起于甲寅，支、干相配为十二辰，六甲而天道周矣。岁以是纪而年不乱，月以是纪而时不易，昼夜以是纪而人知度，东西南北以是纪而方不惑。
+
+> 制嫁，上古男女无别，太昊始制嫁娶，以俪皮为礼。正姓氏，通媒妁，以重人伦之本，而民始不渎。
+
+> 以龙纪官，太昊时有龙马负图出于河之瑞，因而名官，始以龙纪，号曰龙师。命朱襄为飞龙氏，造书契；昊英为潜龙氏，造甲历；大庭为居龙氏，治屋庐；浑沌为降龙氏，驱民害；阴康为土龙氏，治田里；栗陆为水龙氏，繁滋草木，疏导泉源。又命五官：春官为青龙氏，又曰苍龙；夏官为赤龙氏；秋官为白龙氏；冬官为黑龙氏；中官为黄龙氏。于是共工为上相，柏皇为下相，朱襄、昊英常居左右，栗陆居北，赫胥居南，昆连居西，葛天居东，阴康居下，分理宇内，而政化大洽。
+
+> 造琴瑟，太昊作荒乐，歌扶徕，咏网罟，以镇天下之人，命曰立基。斫桐为琴，绳丝为弦。弦二十有七，命之曰离徽，以通神明之贶，以合天人之和。桑为三十六弦之瑟，以修身理性，反其天真，而乐音自是兴焉。
+
+> 帝崩，葬于陈，神农氏继世践位。陈在今陈仓黄帝所都，今宝鸡也。
 
 ## 炎帝
-炎帝神农氏，以火德王。少典氏之君娶于有氏之女曰安登，生二子焉，长曰石年，育于姜水，故以姜为姓。以火德代伏羲氏治天下，故曰炎帝。
-都陈。初蓺五谷。尝百草，制医药。古者，民茹草木之实，食禽兽之肉，未知耕稼，炎帝因天时，相地宜，斫木为耜，揉木为耒，始教民蓺五谷，而农事兴焉。民有疾病，未知药石，炎帝始味草木之滋，察其寒、温、平、热之性，辨其君、臣、佐、使之义，尝一日而遇七十毒，神而化之，遂作方书以疗民疾，而医道自此始矣。复察水泉甘、苦，令人知所避就。由是斯民居安食力，而无夭札之患，天下宜之，故号曰神农氏。
-始为日中之市。炎帝之世，其俗朴重端悫，不忿争而财足，始列廛于国，日中为市，致天下之民，聚天下之货，交易而退，各得其所。
-以火纪官。因火德王，故以火纪官，为火帝。春官为大火，夏官为鹑火，秋官为西火，冬官为北火，中官为中火。
-或传炎帝传八世，至榆罔而亡，黄帝继世而立。
+
+> 炎帝神农氏，以火德王。少典氏之君娶于有氏之女曰安登，生二子焉，长曰石年，育于姜水，故以姜为姓。以火德代伏羲氏治天下，故曰炎帝。
+
+> 都陈。初蓺五谷。尝百草，制医药。古者，民茹草木之实，食禽兽之肉，未知耕稼，炎帝因天时，相地宜，斫木为耜，揉木为耒，始教民蓺五谷，而农事兴焉。民有疾病，未知药石，炎帝始味草木之滋，察其寒、温、平、热之性，辨其君、臣、佐、使之义，尝一日而遇七十毒，神而化之，遂作方书以疗民疾，而医道自此始矣。复察水泉甘、苦，令
+> 人知所避就。由是斯民居安食力，而无夭札之患，天下宜之，故号曰神农氏。
+
+> 始为日中之市。炎帝之世，其俗朴重端悫，不忿争而财足，始列廛于国，日中为市，致天下之民，聚天下之货，交易而退，各得其所。
+
+> 以火纪官。因火德王，故以火纪官，为火帝。春官为大火，夏官为鹑火，秋官为西火，冬官为北火，中官为中火。
+
+> 或传炎帝传八世，至榆罔而亡，黄帝继世而立。
+
+> 首任神龙氏炎帝都于陈，为天下领袖，后发展若干世为黄帝所败，逐渐迁移。
 
 ## 黄帝
-黄帝有熊氏，以土德王。少典国君之妃曰附宝者生帝于轩辕之丘，因名轩辕，姓公孙。轩辕生而神灵，弱而能言，幼而徇齐，长而敦敏，成而聪明。国于有熊，故号有熊氏。长于姬水，故又以姬为姓。
-及炎帝战于阪泉,神农氏衰，诸侯相侵伐，炎帝榆罔弗能征。于是轩辕习用干戈，以征不享，诸侯咸来宾从。榆罔欲侵陵诸侯，诸侯益叛之。轩辕修德振兵，教熊、罴、貔、貅、、虎，以与榆罔战于阪泉之野。三战，然后得其志。
-诛蚩尤于涿鹿,蚩尤姜姓，炎帝之裔也。好兵喜乱，作刀戟大弩以暴虐天下。轩辕乃征师诸侯，与蚩尤战于涿鹿之野。蚩尤能作大雾，军士昏迷。轩辕为指南车，以示四方，遂擒蚩尤戮之。
-诸侯尊帝为天子，代神农氏以治天下,轩辕自涿鹿诛蚩尤还，天下诸侯共尊为天子，以代神农氏治天下。因其有土德之瑞，故号曰黄帝。
-以云纪官,帝初受命，适有云瑞之应，因以云名官，号为云师。春官为青云，夏官为缙云，秋官为白云，冬官为黑云，中官为黄云。
-立六相暨史官。黄帝得六相而天地治，神明至。风后明乎天道，太常察乎地利，苍龙辨乎东方，祝融辨乎南方，大封辨乎西方，后土辨乎北方。帝命仓颉为左史，沮诵为右史。仓颉见鸟兽之迹，体类象形而制字。
-立占天官,帝受河图，得其五要，乃设灵台，立五官以叙五事。命鬼臾占星，斗苞授规，正日月星辰之象，于是乎有星官之书。命羲、和占日，尚仪占月，车区占风。
-命大挠作甲子,帝命大挠探五行之情，占斗纲所建，始作甲子。
-命容成作盖天及调历,帝命容成作盖天，以象周天之形。综六术，以定气运。问鬼臾上下周纪，以作调历，岁纪甲寅，日纪甲子，而时节定。是岁己酉朔旦，日南至，而获神策，得宝鼎。鬼臾曰：“是谓得天之纪，终而复始。”乃迎日推策，造十六神历，积邪分以置闰，配甲子而设蔀。于是时惠而辰从矣。
-命隶首作数,帝命隶首定数，以率其羡，要其会，而律、度、量、衡由是而成焉。
-命伶伦造律,帝命伶伦取竹嶰谿之谷，以生空窍厚钧者，断两节间吹之，以为黄钟之宫。又制十二筒以象凤凰之鸣，而别十二律，其雄鸣为六，雌鸣亦六，以比黄钟之宫，生六律、六吕，候气之应，以立宫、商、角、徵、羽之声，治阴阳之气，节四时之变，推律历之数，起消息，正闰余。
-命荣猨作十二钟,命大容作咸池之乐,作冕旒，帝命甯封为陶正，赤将为木正，以利器用。挥作弓，夷牟作矢，以威天下。
-帝命共鼓、化狐刳木为舟，剡木为楫，以济不通；邑夷法斗之周旋，作大辂以行四方，由是车制备。服牛乘马，引重致远，而天下利矣。
-作合宫,帝广宫室之制，遂作合宫，祀上帝，接万灵，布政教焉。
-作货币,范金为货，制金刀，立五币，以制国用，而货币行矣。
-作内经,帝以人之生也，负阴而抱阳，食味而被色，寒暑荡之于外，喜怒攻之于内，夭昏凶札，君民代有。乃上穷下际，察五气，立五运，洞性命，纪阴阳，咨于岐伯，而作内经。复命俞跗、岐伯、雷公察明堂，究脉息；巫彭、桐君处方饵，而人得以尽年。
-命元妃西陵氏教民蚕,西陵氏之女嫘祖为帝元妃，始教民育蚕，治丝茧以供衣服，而天下无皴瘃之患，后世祀为先蚕。
-画野分州，经土设井,帝画野分州，得百里之国万区。命匠营国邑，置左右太监监于万国，万国以和。遂经土设井以塞争端，立步制亩以防不足。使八家为井，井开四道，而分八宅。井一为邻，邻三为朋，朋三为里，里五为邑，邑十为都，都十为师，师十为州。分之于井而计于州，则地著而数详。
-帝采首山之铜，铸三鼎于荆山之阳。鼎成，崩焉,葬崩于荆山之阳,葬桥山。子玄嚣践位。
+
+> 典国君之妃曰附宝者生帝于轩辕之丘，因名轩辕，姓公孙。轩辕生而神灵，弱而能言，幼而徇齐，长而敦敏，成而聪明。长于姬水，故又以姬为姓。黄帝与起于关中，近于炎帝部落。后双发发生冲突，战胜最后一任炎帝榆罔于阪泉，炎帝部落逐渐迁移其它地方。诸侯尊帝为天子，代神农氏以治天下。轩辕之丘在关中偏北，因当地土黄，所以以土黄为正色，号黄帝。后诛蚩尤于涿鹿。有说蚩尤姜姓，炎帝之裔也，也是有可能的。
+
+> 以云纪官,帝初受命，适有云瑞之应，因以云名官，号为云师。春官为青云，夏官为缙云，秋官为白云，冬官为黑云，中官为黄云。
+
+> 立六相暨史官。黄帝得六相而天地治，神明至。风后明乎天道，太常察乎地利，苍龙辨乎东方，祝融辨乎南方，大封辨乎西方，后土辨乎北方。帝命仓颉为左史，沮诵为右史。仓颉见鸟兽之迹，体类象形而制字。
+
+> 立占天官,帝受河图，得其五要，乃设灵台，立五官以叙五事。命鬼臾占星，斗苞授规，正日月星辰之象，于是乎有星官之书。命羲、和占日，尚仪占月，车区占风。
+
+> 命大挠作甲子,帝命大挠探五行之情，占斗纲所建，始作甲子。
+
+> 命容成作盖天及调历,帝命容成作盖天，以象周天之形。综六术，以定气运。问鬼臾上下周纪，以作调历，岁纪甲寅，日纪甲子，而时节定。是岁己酉朔旦，日南至，而获神
+> 策，得宝鼎。鬼臾曰：“是谓得天之纪，终而复始。”乃迎日推策，造十六神历，积邪分以置闰，配甲子而设蔀。于是时惠而辰从矣。
+
+> 命隶首作数,帝命隶首定数，以率其羡，要其会，而律、度、量、衡由是而成焉。
+
+> 命伶伦造律,帝命伶伦取竹嶰谿之谷，以生空窍厚钧者，断两节间吹之，以为黄钟之宫。又制十二筒以象凤凰之鸣，而别十二律，其雄鸣为六，雌鸣亦六，以比黄钟之宫，生六律、六吕，候气之应，以立宫、商、角、徵、羽之声，治阴阳之气，节四时之变，推律历之数，起消息，正闰余。
+
+> 命荣猨作十二钟,命大容作咸池之乐,作冕旒，帝命甯封为陶正，赤将为木正，以利器用。挥作弓，夷牟作矢，以威天下。
+
+> 帝命共鼓、化狐刳木为舟楫，作大辂以行四方。
+
+> 作合宫,帝广宫室之制，遂作合宫，祀上帝，接万灵，布政教焉。
+
+> 作内经,帝以人之生也，负阴而抱阳，食味而被色，寒暑荡之于外，喜怒攻之于内，夭昏凶札，君民代有。乃上穷下际，察五气，立五运，洞性命，纪阴阳，咨于岐伯，而作内经。复命俞跗、岐伯、雷公察明堂，究脉息；巫彭、桐君处方饵，而人得以尽年。
+
+> 命元妃西陵氏教民蚕,西陵氏之女嫘祖为帝元妃，始教民育蚕，治丝茧以供衣服，而天下无皴瘃之患，后世祀为先蚕。
+画野分州，经土设井,帝画野分州，得百里之国万区。命匠营国邑，置左右太监监于万国，万国以和。遂经土设井以塞争端，立步制亩以防不足。使八家为井，井开四道，而分
+八宅。井一为邻，邻三为朋，朋三为里，里五为邑，邑十为都，都十为师，师十为州。分之于井而计于州，则地著而数详。
+
+> 帝采首山之铜，铸三鼎于荆山之阳。鼎成，崩焉,葬崩于荆山之阳,葬桥山，今延安黄帝陵是也，历代帝王均在此祭祀黄帝。子玄嚣践位。
 
 ## 少昊
-少昊金天氏，以金德王。名挚，姓己，黄帝之子玄嚣也。母曰嫘祖。黄帝之世降居江水，邑于穷桑，故号穷桑氏。国于青阳，因号青阳氏。以金德王天下，遂号金天氏。能修太昊之法，故曰少昊。
-徙都于曲阜。凤鸟来集，以鸟纪官。少昊之立也，凤鸟适至，因以鸟纪官。凤鸟氏，历正也；玄鸟氏，司分者也；伯赵氏，司至者也；青鸟氏，司启者也；丹鸟氏，司闭者也；祝鸠氏，司徒也；雎鸠氏，司马也；鸤鸠氏，司空也；爽鸠氏，司寇也；鹘鸠氏，司事也。五鸠，鸠民者也。五雉，为九工正，利器用，正度量，夷民者也。九扈，为九农正，扈民无淫者也。
-时诸福之物毕至，作大渊之乐以谐人神，和上下，是曰九渊。
-帝崩，葬于曲阜，高阳氏践位。或曰帝葬于云阳，故又曰云阳氏。
+
+> 少昊金天氏，以金德王。名挚，姓己，黄帝之子玄嚣也。母曰嫘祖。黄帝之世降居江水，邑于穷桑，故号穷桑氏。国于青阳，因号青阳氏。以金德王天下，遂号金天氏。能修太昊之法，故曰少昊。
+
+> 徙都于曲阜。凤鸟来集，以鸟纪官。少昊之立也，凤鸟适至，因以鸟纪官。凤鸟氏，历正也；玄鸟氏，司分者也；伯赵氏，司至者也；青鸟氏，司启者也；丹鸟氏，司闭者也；祝鸠氏，司徒也；雎鸠氏，司马也；鸤鸠氏，司空也；爽鸠氏，司寇也；鹘鸠氏，司事也。五鸠，鸠民者也。五雉，为九工正，利器用，正度量，夷民者也。九扈，为九农正，扈民无淫者也。
+
+> 时诸福之物毕至，作大渊之乐以谐人神，和上下，是曰九渊。
+
+> 帝崩，葬于曲阜，高阳氏践位。或曰帝葬于云阳，故又曰云阳氏。
 
 ## 帝颛顼
-颛顼高阳氏，颛顼高阳氏以水德王，都于帝丘，色尚赤。帝姬姓，祖黄帝，父昌意，母蜀山氏女曰昌仆，是为女枢，生帝于若水。
+
+> 颛顼高阳氏，颛顼高阳氏以水德王，都于帝丘，色尚赤。帝姬姓，祖黄帝，父昌意，母蜀山氏女曰昌仆，是为女枢，生帝于若水。
 年十岁佐少昊，年二十即帝位，以水德绍金天氏政。初国高阳，故号高阳氏。
-命五官，以少昊之四子重、该、修、熙实能金、木及水，乃俾重为木正，曰句芒；该为金正，曰蓐收；修、熙相代为水正，曰玄冥；又以炎帝之子句龙为土正；而帝之孙黎为火正，曰祝融：是为五官。
-帝制历，以孟春为元。是岁正月朔旦立春，五星会于天，历营室，冰冻始泮，蛰虫始发，鸡始三号，鸟兽万物，莫不应和，故帝为历宗。
-帝命飞龙氏会八风之音，为圭水之曲。以召气而生物，浮金效珍，于是铸为之钟，作五基、六英之乐以调阴阳，享上帝，朝群后，名曰承云。
-帝崩，葬于濮阳，高辛氏践位。
+
+> 命五官，以少昊之四子重、该、修、熙实能金、木及水，乃俾重为木正，曰句芒；该为金正，曰蓐收；修、熙相代为水正，曰玄冥；又以炎帝之子句龙为土正；而帝之孙黎为火正，曰祝融：是为五官。
+
+> 帝制历，以孟春为元。是岁正月朔旦立春，五星会于天，历营室，冰冻始泮，蛰虫始发，鸡始三号，鸟兽万物，莫不应和，故帝为历宗。
+
+> 帝命飞龙氏会八风之音，为圭水之曲。以召气而生物，浮金效珍，于是铸为之钟，作五基、六英之乐以调阴阳，享上帝，朝群后，名曰承云。
+
+> 帝崩，葬于濮阳，高辛氏践位。
 
 ## 帝喾
-帝喾高辛氏，都于亳，以木德王，色尚黑。帝姬姓，名夋。祖曰少昊，父曰极。生而神灵。年十五，佐颛帝，受封于辛。年三十，以木德代高阳氏为天子。以其肇基于辛，故号高辛氏。
-帝命咸黑典乐，为声歌，名曰六英。帝元妃有邰氏女曰姜嫄，与帝禋祀上帝而生弃，为舜后稷，其后为周。次妃有娀氏女曰简狄，祈于高禖，有飞燕之祥而生契，为舜司徒，其后为商。三妃陈锋氏女曰庆都，有赤龙之祥而生尧，是为陶唐氏。四妃娵訾氏女曰常仪，生挚。帝崩，子挚嗣立。
-帝崩，葬于顿丘，子挚践位。
+
+> 帝喾高辛氏，都于亳，以木德王，色尚黑。帝姬姓，名夋。祖曰少昊，父曰极。生而神灵。年十五，佐颛帝，受封于辛。年三十，以木德代高阳氏为天子。以其肇基于辛，故号高辛氏。
+
+> 帝命咸黑典乐，为声歌，名曰六英。帝元妃有邰氏女曰姜嫄，与帝禋祀上帝而生弃，为舜后稷，其后为周。次妃有娀氏女曰简狄，祈于高禖，有飞燕之祥而生契，为舜司徒，其后为商。三妃陈锋氏女曰庆都，有赤龙之祥而生尧，是为陶唐氏。四妃娵訾氏女曰常仪，生挚。帝崩，子挚嗣立。
+
+> 帝崩，葬于顿丘，子挚践位。
 
 ## 帝挚
-挚在位九年，荒淫无度，不修善政，诸侯于是废之，而推尊尧为天子。
+
+> 挚在位九年，荒淫无度，不修善政，诸侯于是废之，而推尊尧为天子。
 
 ## 帝尧
-甲辰，唐帝尧元载，帝自唐侯践天子位于平阳，以火德王。
-帝姓伊耆，名放勋，帝喾高辛氏之子，母高辛氏妃陈锋氏女，帝挚之弟，黄帝轩辕氏之曾孙也。，育于母家伊侯之国，后徙耆，故曰伊耆氏。年十有三佐帝挚封植，受封于陶；年十有五复封于唐，为唐侯，故又号陶唐氏。挚在位九年，天人厌弃，诸侯尊帝为天子。年十有六，践天子之位于平阳。
-乙巳，二载，命羲、和置闰法，定四时成岁。
-南夷有越裳氏，重译来朝，献神龟，盖千岁，方三尺余，背有科斗文，记开辟以来；尧命录之，谓之龟历。
-尧之庭有草生焉，曰蓂荚，十五之前日生一叶，十五之后日落一叶，小余则一叶厌而不落，观之可以知旬朔，故又名历草。
-乙卯，十有二载，巡狩方岳。
-癸巳，五十载，游于康衢，观于华。
-帝治天下五十载，游于康衢，儿童歌曰：“立我烝民，莫匪尔极，不识不知，顺帝之则。”有老人击壤而歌于路曰：“日出而作，日入而息，凿井而饮，耕田而食，帝力何有于我哉！”观于华，华封人祝曰：“使圣人富、寿、多男子。”帝曰：“辞，多男子则多惧，富则多事，寿则多辱。”封人曰：“天生万民，必授之职。多男子而授之职，何惧之有？富而使人分之，何事之有？天下有道，与物皆昌；天下无道，修德就闲。千岁厌世，去而上仙，乘彼白云，至于帝乡，何辱之有？”
-洪水为患，咨四岳，举鲧，命为司空，俾乂。
-壬子，六十有九载，鲧治水，绩用弗成。
-癸丑，七十载，征虞舜登庸，二女嫔于虞。
-纲　甲寅，七十有一载，舜流四凶族。
-神龟负文出于洛。
-癸亥，八十载，禹治水成功，因定九州贡赋，秉玄圭入觐告成。
-甲子，八十有一载，肇十有二州，封十有二山，浚川。
-癸未，一百载，帝崩于阳城。
-帝之为君也，其仁如天，其智如神，就之如日，望之如云，富而不骄，贵而不舒。黄收纯衣，彤车白马，茅茨不剪，朴桷不斫，素题不枅，大路不画，越席不缘，太羹不和，粢食不毇。藜藿之羹，饭于土簋，饮于土铏。金银珠玉不饰，锦绣文绮不展，奇怪异物不视，玩好之器不宝，淫泆之乐不听，宫垣室屋不垩色。布衣掩形，鹿裘御寒，衣履不敝尽不更为也。
-乙酉，一百有二载，舜避尧之子居于南河之南，天下不归尧之子而归舜，舜于是践天子位。
-乙卯，七十有二载，舜使禹平水土，益掌火，弃教民播种，契为司徒，敷五教。
-丙辰，七十有三载，春正月，帝荐舜于天。舜受终于文祖。
-己未，七十有六载，制五刑。
-庚申，七十有七载，作大章乐。
-辛酉，七十有八载，舜巡狩方岳。
+
+> 甲辰，唐帝尧元载，帝自唐侯践天子位于平阳，以火德王。
+
+> 帝姓伊耆，名放勋，帝喾高辛氏之子，母高辛氏妃陈锋氏女，帝挚之弟，黄帝轩辕氏之曾孙也。，育于母家伊侯之国，后徙耆，故曰伊耆氏。年十有三佐帝挚封植，受封于陶；年十有五复封于唐，为唐侯，故又号陶唐氏。挚在位九年，天人厌弃，诸侯尊帝为天子。年十有六，践天子之位于平阳。
+
+> 乙巳，二载，命羲、和置闰法，定四时成岁。
+
+> 南夷有越裳氏，重译来朝，献神龟，盖千岁，方三尺余，背有科斗文，记开辟以来；尧命录之，谓之龟历。
+
+> 尧之庭有草生焉，曰蓂荚，十五之前日生一叶，十五之后日落一叶，小余则一叶厌而不落，观之可以知旬朔，故又名历草。
+
+> 乙卯，十有二载，巡狩方岳。
+
+> 癸巳，五十载，游于康衢，观于华。
+
+> 帝治天下五十载，游于康衢，儿童歌曰：“立我烝民，莫匪尔极，不识不知，顺帝之则。”有老人击壤而歌于路曰：“日出而作，日入而息，凿井而饮，耕田而食，帝力何有于我哉！”观于华，华封人祝曰：“使圣人富、寿、多男子。”帝曰：“辞，多男子则多惧，富则多事，寿则多辱。”封人曰：“天生万民，必授之职。多男子而授之职，何惧之有？富而使人分之，何事之有？天下有道，与物皆昌；天下无道，修德就闲。千岁厌世，去而上仙，乘彼白云，至于帝乡，何辱之有？”
+
+> 洪水为患，咨四岳，举鲧，命为司空，俾乂。
+
+> 以鲧治水，绩用弗成。
+
+> 征虞舜登庸，二女嫔于虞。舜流四凶族。
+
+> 神龟负文出于洛。（河洛出图盖自古代帝王为达政治目的所耍的小把戏）
+
+> 禹治水成功，因定九州贡赋，秉玄圭入觐告成。
+
+> 癸未，一百载，帝崩于阳城。
+
+> 帝之为君也，其仁如天，其智如神，就之如日，望之如云，富而不骄，贵而不舒。黄收纯衣，彤车白马，茅茨不剪，朴桷不斫，素题不枅，大路不画，越席不缘，太羹不和，粢食不毇。藜藿之羹，饭于土簋，饮于土铏。金银珠玉不饰，锦绣文绮不展，奇怪异物不视，玩好之器不宝，淫泆之乐不听，宫垣室屋不垩色。布衣掩形，鹿裘御寒，衣履不敝尽不更为也。
+
+> 舜避尧之子居于南河之南，天下不归尧之子而归舜，舜于是践天子位。
+
+> 舜使禹平水土，益掌火，弃教民播种，契为司徒，敷五教。
+
+> 帝荐舜于天。舜受终于文祖。
+
+> 制五刑，作大章乐，舜巡狩方岳。
 
 ## 帝舜
-帝舜有虞氏，姚姓，名重华，瞽瞍之子。虞帝舜元载，春正月元日，帝格于文祖，践天子位于蒲阪，以土德王。
-帝舜少以孝名，舜母死，瞽瞍更娶妻而生象，象傲。瞽瞍爱妻后子，常欲杀舜，舜避逃；及有小过，则受罪。顺适不失子道，孝而慈于弟，日以笃谨。年二十，以孝闻。耕历山，历山之人皆让畔。渔雷泽，雷泽之人皆让居。陶河滨，河滨之器不苦窳。作什器于寿丘，就时于负夏。所居一年成聚，二年成邑，三年成都。
-纲　在璇玑玉衡，以齐七政。帝尧登庸而禅以帝位，摄政二十有八载。
-尧将逊位于舜，先试之以事，以观其才德。乃使之慎徽五典，五典克从。纳于百揆，百揆时叙。宾于四门，四门穆穆。纳于大麓，烈风雷雨弗迷。
-帝鸿氏有不才子，号曰“浑沌”；少昊氏有不才子，号曰“穷奇”；颛顼氏有不才子，号曰“梼杌”；缙云氏有不才子，号曰“饕餮”：天下谓之“四凶”。舜皆投之四裔。
-舜举十六族，命九官。禹为司空，弃为后稷，契为司徒，皋陶为士，垂为共工，益为虞，伯夷为秩宗，后夔典乐，龙作纳言，是所谓九官也。
-高阳氏有才子八人，曰苍舒、敳、梼戭、大临、尨降、庭坚、仲容、叔达，天下谓之“八恺”。高辛氏有才子八人，曰伯奋、仲堪、叔献、季仲、伯虎、仲熊、叔豹、季狸，天下谓之“八元”。此十六族也，世济其美，不陨其名。舜举“八恺”，使主后土，以揆百事；举“八元”，使布五教于四方。
-尧崩，丧毕，始践天子之位于蒲阪，仍以建寅之月为岁首。
-尧之子丹朱不肖，乃求贤自代，访诸四岳，岳曰：“有鳏民曰虞舜，瞽瞍之子。父顽，母嚚，弟傲，舜以孝道谐其家，使不至于恶。”帝曰：“我其试哉。”乃召用，命以位，以二女妻舜。
-封朱于丹，以奉先祀。帝朝于瞽瞍，封弟象于有庳。禹、皋陶、益、稷相与陈谟。
-巡狩四岳八伯。丁亥，二载，帝广视听，求贤才以自辅。欲纳谏，以闻其失。立诽谤之木，使天下得攻其过。置敢谏之鼓，使天下得尽其言。
-帝弹五弦之琴，歌南风之诗曰：“南风之薰兮，可以解吾民之愠兮。南风之时兮，可以阜吾民之财兮。”戊子，三载，考绩。庚寅，五载，作箾韶乐九成，凤凰来仪。帝以夔为乐正，命夔为二十三弦之瑟。夔修九招、六列、六英以明帝德，正六律，和五音，以通八风。重、黎欲益求人，帝曰：“一夔足矣。”> 
-甲午，九载，三考，黜陟幽明。
-己亥，十有四载，帝庸作歌。时景星出，卿云兴，百工相和而歌。帝乃歌之曰：“卿云烂兮，纠缦缦兮，日月光华，旦复旦兮。”八伯咸进稽首曰：“明明上天，烂烂星陈，日月光华，弘于一人。”
-丁巳，三十有二载，帝命禹摄政总师。戊午，三十有三载，春正月朔旦，禹受命于神宗，率百官，若帝之初。
-帝命禹叙洪范九畴，复九州。
-时有苗弗率，帝命禹徂征。三旬，苗民逆命，禹班师。帝乃诞敷文德，舞干、羽于两阶。七旬有苗格。
-癸酉，四十有八载，帝南巡狩，崩于苍梧之野。
 
->  部分资料来自网络，如侵犯您的权益，请联系我删除！
+> 帝舜有虞氏，姚姓，名重华，瞽瞍之子。虞帝舜元载，春正月元日，帝格于文祖，践天子位于蒲阪，以土德王。
+
+> 帝舜少以孝名，舜母死，瞽瞍更娶妻而生象，象傲。瞽瞍爱妻后子，常欲杀舜，舜避逃；及有小过，则受罪。顺适不失子道，孝而慈于弟，日以笃谨。年二十，以孝闻。耕历山，历山之人皆让畔。渔雷泽，雷泽之人皆让居。陶河滨，河滨之器不苦窳。作什器于寿丘，就时于负夏。所居一年成聚，二年成邑，三年成都。
+
+> 在璇玑玉衡，以齐七政。帝尧登庸而禅以帝位，摄政二十有八载。
+
+> 尧将逊位于舜，先试之以事，以观其才德。乃使之慎徽五典，五典克从。纳于百揆，百揆时叙。宾于四门，四门穆穆。纳于大麓，烈风雷雨弗迷。
+
+> 帝鸿氏有不才子，号曰“浑沌”；少昊氏有不才子，号曰“穷奇”；颛顼氏有不才子，号曰“梼杌”；缙云氏有不才子，号曰“饕餮”：天下谓之“四凶”。舜皆投之四裔。
+
+> 舜举十六族，命九官。禹为司空，弃为后稷，契为司徒，皋陶为士，垂为共工，益为虞，伯夷为秩宗，后夔典乐，龙作纳言，是所谓九官也。
+
+> 高阳氏有才子八人，曰苍舒、敳、梼戭、大临、尨降、庭坚、仲容、叔达，天下谓之“八恺”。高辛氏有才子八人，曰伯奋、仲堪、叔献、季仲、伯虎、仲熊、叔豹、季狸，天下谓之“八元”。此十六族也，世济其美，不陨其名。舜举“八恺”，使主后土，以揆百事；举“八元”，使布五教于四方。
+
+> 尧崩，丧毕，始践天子之位于蒲阪，仍以建寅之月为岁首。
+
+> 尧之子丹朱不肖，乃求贤自代，访诸四岳，岳曰：“有鳏民曰虞舜，瞽瞍之子。父顽，母嚚，弟傲，舜以孝道谐其家，使不至于恶。”帝曰：“我其试哉。”乃召用，命以位，以二女妻舜。
+
+> 封朱于丹，以奉先祀。帝朝于瞽瞍，封弟象于有庳。禹、皋陶、益、稷相与陈谟。
+
+> 巡狩四岳八伯。丁亥，二载，帝广视听，求贤才以自辅。欲纳谏，以闻其失。立诽谤之木，使天下得攻其过。置敢谏之鼓，使天下得尽其言。
+
+> 帝弹五弦之琴，歌南风之诗曰：“南风之薰兮，可以解吾民之愠兮。南风之时兮，可以阜吾民之财兮。”戊子，三载，考绩。庚寅，五载，作箾韶乐九成，凤凰来仪。帝以夔为乐正，命夔为二十三弦之瑟。夔修九招、六列、六英以明帝德，正六律，和五音，以通八风。重、黎欲益求人，帝曰：“一夔足矣。”
+
+> 甲午，九载，三考，黜陟幽明。
+
+> 己亥，十有四载，帝庸作歌。时景星出，卿云兴，百工相和而歌。帝乃歌之曰：“卿云烂兮，纠缦缦兮，日月光华，旦复旦兮。”八伯咸进稽首曰：“明明上天，烂烂星陈，日月光华，弘于一人。”
+
+> 丁巳，三十有二载，帝命禹摄政总师。戊午，三十有三载，春正月朔旦，禹受命于神宗，率百官，若帝之初。
+
+> 帝命禹叙洪范九畴，复九州。
+
+> 时有苗弗率，帝命禹徂征。三旬，苗民逆命，禹班师。帝乃诞敷文德，舞干、羽于两阶。七旬有苗格。
+
+> 癸酉，四十有八载，帝南巡狩，崩于苍梧之野。
