--- a/_posts/1992-09-01-宝鸡上学记.md
+++ b/_posts/1992-09-01-宝鸡上学记.md
@@ -7,7 +7,9 @@ date: 1992-09-01 05:01:01
 
 
 
-> 小学初中
+## 小学
+
+## 初中
 
 > 小朋友喜欢攀比，大家不让炫耀，买个东西还要给同学吹牛，去过那也要吹以下
 > 上学 北京帆布书包 故事 可能得分篇
@@ -28,8 +30,16 @@ date: 1992-09-01 05:01:01
 > 捐资助学记
 > 小学厕所记
 > 穿军装记
-> 高中 
+
+
+## 高中 
+
+### 报道
+
+### 高中面前 蹲在食堂大厅池
+
 > 痴迷买书
 > 暗恋记
 > 补课记
+
 
