--- a/_posts/2022-12-27-周易札记.md
+++ b/_posts/2022-12-27-周易札记.md
@@ -5,6 +5,16 @@ description: 读《周易》中的一些想法札记
 date: 2022-12-27 11:44:01
 ---
 
+## 自叙
+
+> 周易自然是古代卜筮知识的总结，古人遇到疑事就用卜筮的方式来决断。一生二二生三三生万物就是这个道理，现行的事六十四卦，当然了可以推演出更多的。可惜人才凋零，很难再进化。
+
+> 古人将卦辞和结果不断进行总结因此才有了易经。后世又不断的增加内容，形成了《周易大传》，当然了孔子对内容增加较多。而孔子之后则逐渐变成了解注。
+
+> 阴阳其实是两个状态，两者之间进行转换，这自然是有规律的叫道。
+
+> 六爻就是其六种变化，如果六爻全变就是转换完成了，古人就是根据其中发生变化的爻辞进行卜筮。
+
 ## 乾
 
 > 天行键 君子以自强不息
