--- a/_posts/1985-04-25-西府八九十年代生活.md
+++ b/_posts/1985-04-25-西府八九十年代生活.md
@@ -161,3 +161,14 @@ date: 1985-04-25 05:01:01
 
 ## 抽烟买烟记
 
+## 村里的传奇老人
+
+> 这个事真事，可能好多人不信，但是却是我身边的事情。我们村子有个老太太，这个老太太80同其它老太太一样都是裹的小脚。她每天都要来回她家走到她女儿家（她女儿嫁给同村）。我们每天都能见到老太太，她就是那么走着，精神非常好。后来有一天，老太太去世了，一直到三天今后，寿衣都穿上三天了，人都已经装进棺材了，马上要钉棺材盖的时候老太太却苏醒过来了，自己站了起来，走出棺材，脱掉寿衣。这倒不奇，奇的是老太太起来后说得话。老太太说他被阎王爷的小鬼勾了下去，还遇到了同村的老太太，他们在下面还跟她打招呼。后来阎王爷带着她去审问，查了下账本，发现老太太阳寿还没到，就给老太太说：“老夫人，你的口粮还没吃完，还有三年口粮吃，你回去吧”，就派小鬼把她送了回来。后来老太太真的又活了三年，才寿终正寝。这是真事，并非我编造，想来极不可思议，但是确实是我身边的事情。有些事情真的很难用科学来解释。
+
+
+## 散状但还方便面
+
+## 麻辣片按张
+
+## 校门口的老头的糖葫芦 玉米棒可以换
+
