--- a/_posts/2022-10-12-读《资治通鉴》札记（九）.md
+++ b/_posts/2022-10-12-读《资治通鉴》札记（九）.md
@@ -11,19 +11,9 @@ date: 2022-12-03 05:01:01
 
 <hr/>
 
+## 诸侯逐鹿
 
-> 夏，四月，二世谓赵高曰：“夫人生居世间也，譬犹骋六骥过决隙也。欲悉耳目之所好，穷心志之所乐，以终吾年寿，可乎？赵高对以严法而刻刑，有罪者相坐，诛灭大臣及宗室，尽除先帝之故臣，更置陛下之所亲信者。二世然之。乃更法律益刻深，于是公子十二人死咸阳市，十公主死于杜，相连逮者不可胜数。复作阿房宫。
-
-
-> 秋，七月，阳城陈胜、阳夏吴广起兵于蕲，称大楚。攻大泽乡，拔之，收而攻蕲，蕲下。沿途望风而逃，陈胜乃入据陈。遂自立为王，号“张楚”。当是时，诸郡县苦秦法，争杀长吏以应涉。
-
-> 九月，沛人刘邦以亭长送徒骊山，徒多道亡，因畏秦法起兵于沛，遗沛父老，为陈利害。父老乃率子弟共杀沛令，迎刘季，立为沛公，以应诸侯。
-
-> 下相人项燕弟及子，项梁，项籍起于吴。籍少学书，不成，学剑，又不成。项梁怒之。籍曰：“书，足以记名姓而已！剑，一人敌，不足学；学万人敌！”于是项梁教之法，然只略知其意，又不肯竟学。籍长八尺馀，力能扛鼎。
-
-> 狄县人齐故宗室田儋起于齐，自立为齐王，东略定齐地。
-
-> 韩广北攻燕，燕地豪桀欲共立广为燕王。赵王与张耳、陈馀北攻燕，为燕军所得，赵养卒（一个火夫）说以张耳、陈馀欲燕杀赵王以自立，燕将乃归赵王。魏地已平，诸侯欲立周市为魏王。周市说：“天下昏乱，忠臣乃见。今天下共畔秦，其义必立魏王后乃可。”派人往陈县迎魏咎，往返五次，陈胜送魏咎还，立为魏王。
+> 夏，四月，二世谓赵高曰：“夫人生居世间也，譬犹骋六骥过决隙也。欲悉耳目之所好，穷心志之所乐，以终吾年寿，可乎？赵高对以严法而刻刑，有罪者相坐，诛灭大臣及宗室，尽除先帝之故臣，更置陛下之所亲信者。二世然之。乃更法律益刻深，于是公子十二人死咸阳市，十公主死于杜，相连逮者不可胜数。复作阿房宫。秋，七月，阳城陈胜、阳夏吴广起兵于蕲，称大楚,自立为王，号“张楚”。当是时，诸郡县苦秦法，争杀长吏以应涉。 九月，沛人刘邦以亭长送徒骊山，徒多道亡，因畏秦法起兵于沛。父老乃率子弟共杀沛令，迎刘季，立为沛公，以应诸侯。相人项燕弟及子，项梁，项籍起于吴。狄县人齐故宗室田儋起于齐，自立为齐王，东略定齐地。 韩广北攻燕，燕地豪桀欲共立广为燕王。赵王与张耳、陈馀北攻燕，为燕军所得，赵养卒（一个火夫）说以张耳、陈馀欲燕杀赵王以自立，燕将乃归赵王。
 
 > 二世废卫君角为庶人，卫国正式灭亡。
 
@@ -41,11 +31,7 @@ date: 2022-12-03 05:01:01
 
 #### 陈胜之死：
 
-> 腊月，陈王之汝阴，还，至下城父，其御庄贾杀陈王以降。初，陈涉既为王，其故人皆往依之。或说陈王曰：“客愚无知，颛妄言，轻威。”陈王斩之。诸故人皆自引去，由是无亲陈王者。
-陈王故涓人（内侍）将军吕臣为苍头军，起新阳，攻陈，下之，杀庄贾，复以陈为楚。葬陈王于砀，谥曰隐王。
-
-> 初，陈王令铚人宋留将兵定南阳，入武关。留已徇南阳，闻陈王死，南阳复为秦，宋留以军降，二世车裂留以徇。魏周市将兵略地丰、沛，使人招雍齿，即以丰降魏。沛公攻之，不克。赵张耳、陈馀收其散兵数万，击李良。良败，走归章邯。张耳、陈馀乃求得赵歇，立歇为赵王，居信都。
-
+> 腊月，陈王之汝阴，还，至下城父，其御庄贾杀陈王以降。初，陈涉既为王，其故人皆往依之。或说陈王曰：“客愚无知，颛妄言，轻威。”陈王斩之。诸故人皆自引去，由是无亲陈王者。陈王故涓人（内侍）将军吕臣为苍头军，起新阳，攻陈，下之，杀庄贾，复以陈为楚。葬陈王于砀，谥曰隐王。
 
 > 黥布者，六人也，姓英氏，坐法黥，以刑徒论输骊山。骊山之徒数十万人，布皆与其徒长豪杰交通，乃率其曹耦，亡之江中为群盗。番阳令吴芮，甚得江湖间心，号曰番君。布往见之，其众已数千人。番君乃以女妻之，使将其兵击秦。
 
@@ -83,21 +69,13 @@ date: 2022-12-03 05:01:01
 
 > 冬，十月，齐将田都畔田荣，助楚救赵。沛公攻破东郡尉于成武。宋义行至安阳，留四十六日不进。天寒，大雨，士卒冻饥。十一月，项羽晨朝将军宋义，即其帐中斩宋义头。诸将皆慑服，莫敢枝梧，乃相与共立羽为假上将军。使人追宋义子，及之齐，杀之。使桓楚报命于怀王。怀王因使羽为上将军。
 
-> 十二月，沛公引兵至栗，与魏将皇欣、武满军合攻秦军，破之。
-
 #### 巨鹿之战
 
-> 章邯筑甬道属河，饷王离。王离兵食多，急攻巨鹿。巨鹿城中食尽、兵少，不敌秦，不敢前。当是时，齐师、燕师皆来救赵，张敖亦北收代兵，得万馀人，来，皆壁馀旁，未敢击秦。项羽已杀卿子冠军，威震楚国，乃遣当阳君、薄将军将卒二万渡河救巨鹿。战少利，绝章邯甬道，王离军乏食。陈馀复请兵。项羽乃悉引兵渡河，皆沈船，破釜、甑，烧庐舍，持三日粮，以示士卒必死，无一还心。于是至则围王离，与秦军遇，九战，大破之，章邯引兵却。诸侯兵乃敢进击秦军，遂杀苏角，虏王离；涉间不降，自烧杀。
-
-> 春，二月，沛公北击昌邑，遇彭越，彭越以其兵从沛公。遂助沛公攻昌邑。昌邑未下，沛公引兵西过高阳。沛公至高阳传舍，使人召郦生。郦生至，入谒。郦生因言六国从横时。沛公喜，赐郦生食，于是遣郦生行，沛公引兵随之，遂下陈留。号郦食其为广野君。
-
-> 三月，沛公攻开封，未拔。西与秦将杨熊会战白马，又战曲遇东，大破之。夏，四月，沛公南攻颍川，屠之。六月，与南阳守齮战犨东，破之，略南阳郡,引兵西，无不下者。所过亡得卤掠，秦民皆喜。
-
-> 章邯军与项羽军相持未战。秦军数却，二世使人让章邯。章邯恐，阴使候始成使项羽，欲约。约未成，项羽军漳南，与秦军战，再破之。项羽悉引兵击秦军汙水上，大破之。章邯使人见项羽，欲约。已盟，章邯见项羽而流涕，为言赵高。项羽乃立章邯为雍王，置楚军中，使长史欣为上将军，将秦军为前行。
+> 章邯筑甬道属河，饷王离。王离兵食多，急攻巨鹿。巨鹿城中食尽、兵少，不敌秦，不敢前。当是时，齐师、燕师皆来救赵，张敖亦北收代兵，得万馀人，来，皆壁馀旁，未敢击秦。项羽已杀卿子冠军，威震楚国，乃遣当阳君、薄将军将卒二万渡河救巨鹿。战少利，绝章邯甬道，王离军乏食。陈馀复请兵。项羽乃悉引兵渡河，皆沈船，破釜、甑，烧庐舍，持三日粮，以示士卒必死，无一还心。于是至则围王离，与秦军遇，九战，大破之，章邯引兵却。诸侯兵乃敢进击秦军，遂杀苏角，虏王离；涉间不降，自烧杀。春，二月，沛公引兵西，所过亡得卤掠，秦民皆喜。章邯军与项羽军相持未战。秦军数却，二世使人让章邯。章邯恐，乃降项羽。项羽乃立章邯为雍王，置楚军中，使长史欣为上将军，将秦军为前行。
 
 #### 指鹿为马
 
-> 初，中丞相赵高欲专秦权，恐群臣不听，乃先设验，持鹿献于二世曰：“马也。”二世笑曰：“丞相误邪，谓鹿为马！”问左右，左右或默，或言马以阿顺赵高，或言鹿者。高因阴中诸言鹿者以法。后群臣皆畏高，莫敢言其过。八月，沛公将数万人攻武关，屠之。高恐二世恐诛及其身，乃谢病不朝。
+> 初，中丞相赵高欲专秦权，恐群臣不听，乃先设验，持鹿献于二世曰：“马也。”二世笑曰：“丞相误邪，谓鹿为马！”问左右，左右或默，或言马以阿顺赵高，或言鹿者。高因阴中诸言鹿者以法。后群臣皆畏高，莫敢言其过。司马迁过矣，而司马光又引之，后世以为真矣。
 
 #### 秦二世之死
 
