--- a/_posts/2022-12-27-读《资治通鉴》札记（十）.md
+++ b/_posts/2022-12-27-读《资治通鉴》札记（十）.md
@@ -17,44 +17,32 @@ date: 2022-12-27 15:43:01
 
 > 项羽既定河北，率诸侯兵欲西入关。以秦降吏卒尚众，坑秦卒二十馀万人新安城南，独与章邯、长史欣、都尉翳入秦。当是时，项羽兵四十万，号百万，在新丰鸿门；沛公兵十万，号二十万，在霸上。范增说项羽曰：“沛公居山东时，贪财好色。今入关，财物无所取，妇女无所幸，此其志不在小。急击勿失！”于是约沛公会鸿门，意欲除之。楚左尹项伯与张良善，夜驰见之，具告以事。沛公另项伯夜返以告项羽：“日夜望将军至，岂敢反乎”。项伯言于项羽：“今人有大功而击之，不义也”，项羽许诺。沛公旦日从百馀骑来见项羽鸿门，项羽因留沛公与饮。范增数目项羽，项羽不应。范增召项庄，谓曰：“以剑舞，因击沛公于坐，杀之。”庄则入为寿，寿毕，请以剑舞。项庄拔剑起舞。项伯亦拔剑起舞，常以身翼蔽沛公，庄不得击。哙即带剑拥盾入。沛公起如厕，因招樊哙出。樊哙曰：“如今人方为刀俎，我方为鱼肉，何辞为！”于是遂去。鸿门去霸上四十里，留张良使谢项羽，以白璧献羽，玉斗与亚父。居数日，项羽引兵西，屠咸阳，杀秦降王子婴，烧秦宫室，火三月不灭，收其货宝、妇女而东。秦民大失望。韩生说项羽曰：“关中阻山带河，四塞之地，地肥饶，可都以霸。”项羽心思东归，曰：“富贵不归故乡，如衣绣夜行，谁知之者！”韩生退曰：“人言楚人沐猴而冠耳，果然！”项羽闻之，烹韩生。
 
-> 项羽使人致命怀王，怀王曰：“如约。”项羽怒，春，正月，羽阳尊怀王为义帝，徙义帝于江南，都郴。
+#### 项羽分三秦
 
-> 二月，羽分天下王诸将。羽自立为西楚霸王，王梁、楚地九郡，都彭城。立沛公为汉王，王巴、蜀、汉中，都南郑。而三分关中。章邯为雍王，都废丘。长史欣者，尝有德于项梁；都尉董翳劝章邯降楚。故立欣为塞王，王咸阳以东，至河，都栎阳；立翳为翟王，王上郡，都高奴。又分封其它诸王侯。
+> 项羽使人致命怀王，怀王曰：“如约。”项羽怒，春，正月，羽阳尊怀王为义帝，徙义帝于江南，都郴。二月，羽分天下王诸将。羽自立为西楚霸王，王梁、楚地九郡，都彭城。立沛公为汉王，王巴、蜀、汉中，都南郑。而三分关中。章邯为雍王，都废丘。长史欣者，尝有德于项梁；都尉董翳劝章邯降楚。故立欣为塞王，王咸阳以东，至河，都栎阳；立翳为翟王，王上郡，都高奴。又分封其它诸王侯。
 
 > 汉王怒，欲攻项羽，萧何谏曰：“臣愿大王王汉中，养其民以致贤人，收用巴、蜀，还定三秦，天下可图也。”汉王曰：“善！”乃遂就国，以何为丞相。项王使卒三万人从汉王之国。张良送至褒中，汉王遣良归韩；良因说汉王烧绝所过栈道，以备诸侯盗兵，且示项羽无东意。 初，淮阴人韩信，家贫，受漂母之白眼和淮阴屠中少年胯下之辱。后投靠项羽又不为羽所用。萧何月下追韩信，后为萧何所荐，为汉王所重拜为大将。韩信说汉王先定关中之策。八月，汉王引兵从故道出，关中迅速平定。项王以故吴令郑昌为韩王，以距汉。张良遗项王书曰：“汉王失职，欲得关中，如约即止，不敢东。”又以齐、梁反书遗项王,项王以此故无西意，而北击齐。项王使趣义帝行，其群臣、左右稍稍叛之。
 
 ### 太祖高皇帝二年丙申（前205）
 <hr/>
 
+#### 汉王定三秦
+
 > 冬，十月，项王密使九江、衡山、临江王击义帝，杀之江中。
 
-> 张良自韩间行归汉，汉王以为成信侯。 汉王如陕，镇抚关外父老。河南王申阳降，置河南郡。汉王以韩襄王孙信为韩太尉，将兵略韩地。信急击韩王昌于阳城，昌降。十一月，立信为韩王，常将韩兵从汉王。汉王还都栎阳。 诸将拔陇西。
+> 张良自韩间行归汉，汉王以为成信侯。 汉王如陕，镇抚关外父老。河南王申阳降，置河南郡。汉王以韩襄王孙信为韩太尉，将兵略韩地。信急击韩王昌于阳城，昌降。十一月，立信为韩王，常将韩兵从汉王。汉王还都栎阳。 诸将拔陇西。三月，汉王自临晋渡河。魏王豹降，将兵从；下河内，虏殷王卬，置河内郡。
 
-> 三月，汉王自临晋渡河。魏王豹降，将兵从；下河内，虏殷王卬，置河内郡。
+#### 楚汉争霸
 
-> 汉王南渡平阴津，至洛阳新城。三老董公遮说王曰：“‘兵出无名，事故不成’。”于是汉王为义帝发丧，哀临三日，发使告诸侯曰：“天下共立义帝，北面事之。今项羽放杀义帝江南，大逆无道！寡人悉发关中兵，收三河士，南浮江、汉以下，愿从诸侯王击楚之杀义帝者！”。汉王以故得率诸侯兵凡五十六万人伐楚。项王闻之，令诸将击齐，击汉军而东至彭城，大破汉军，而汉王乃得与数十骑遁去，家皆亡，不与汉王相见。
+> 汉王南渡平阴津，至洛阳新城。为义帝发丧，率诸侯兵凡五十六万人伐楚。项王闻之，令诸将击齐，击汉军而东至彭城，大破汉军，而汉王乃得与数十骑遁去，家皆亡，不与汉王相见。是时，吕后兄周吕侯为汉将兵，居下邑。汉王间往从之，稍稍收其士卒。诸侯皆背汉，复与楚。塞王欣、翟王翳亡降楚。五月，汉王至荥阳，诸败军皆会，萧何亦发关中老弱未傅者悉诣荥阳，汉军复大振。汉王将骑兵击楚骑于荥阳东，大破之。
 
-> 是时，吕后兄周吕侯为汉将兵，居下邑。汉王间往从之，稍稍收其士卒。诸侯皆背汉，复与楚。塞王欣、翟王翳亡降楚。
-
-> 五月，汉王至荥阳，诸败军皆会，萧何亦发关中老弱未傅者悉诣荥阳，汉军复大振。汉王拜灌婴为中大夫令，李必、骆甲为左右校尉，将骑兵击楚骑于荥阳东，大破之。
-
-> 初，阳武人陈平归汉王于脩武，因魏无知求见汉王。汉王召入，与语而说之。是日，即拜平为都尉，使为参乘，典护军。诸将尽讙曰：“大王一日得楚之亡卒，未知其高下，而即与同载，反使监护长者！”。 周勃、灌婴等言于汉王：“陈平居家时盗其嫂；事魏不容，亡归楚，又亡归汉，受诸将金！”汉王疑之，召让魏无知。无知曰：“臣进奇谋之士，顾其计诚足以利国家不耳。盗嫂、受金，又何足疑乎！”汉王召让平，平曰：“魏王不能用臣说，故去；事项王，项王不能信人。闻汉王能用人，故归大王。臣裸身来，不受金无以为资。”汉王乃谢，厚赐，拜为护军中尉，诸将乃不敢复言。
-
-> 魏王豹谒归视亲疾；至则绝河津，反为楚。
-
-> 壬午，立子盈为太子。
-
-> 汉兵引水灌废丘，废丘降，章邯自杀。尽定雍地，以为中地、北地、陇西郡。
-
-> 秋，八月，汉王如荥阳，命萧何守关中。九月，信击虏豹，传诣荥阳；悉定魏地，置河东、上党、太原郡。后九月，信破代兵，禽夏说于阏与。信之下魏破代，汉辄使人收其精兵诣荥阳以距楚。
+> 初，阳武人陈平归汉王于脩武，因魏无知求见汉王。汉王召入，与语而说之。是日，即拜平为都尉，使为参乘，典护军。诸将尽讙曰：“大王一日得楚之亡卒，未知其高下，而即与同载，反使监护长者！”。 周勃、灌婴等言于汉王：“陈平居家时盗其嫂；事魏不容，亡归楚，又亡归汉，受诸将金！”汉王疑之，召让魏无知。无知曰：“臣进奇谋之士，顾其计诚足以利国家不耳。盗嫂、受金，又何足疑乎！”汉王召让平，平曰：“魏王不能用臣说，故去；事项王，项王不能信人。闻汉王能用人，故归大王。臣裸身来，不受金无以为资。”汉王乃谢，厚赐，拜为护军中尉，诸将乃不敢复言。魏王豹谒归视亲疾；至则绝河津，反为楚。汉兵引水灌废丘，废丘降，章邯自杀。尽定雍地，以为中地、北地、陇西郡。秋，八月，汉王如荥阳，命萧何守关中。九月，信击虏豹，传诣荥阳；悉定魏地，置河东、上党、太原郡。后九月，信破代兵，禽夏说于阏与。信之下魏破代，汉辄使人收其精兵诣荥阳以距楚。
 
 ### 太祖高皇帝三年丁酉（前204）
 
 <hr/>
 
-> 冬，十月，韩信、张耳以兵数万东击赵。赵王及成安君陈馀闻之，聚兵井陉口，号二十万。信所出奇兵二千骑共候赵空壁逐利，则驰入赵壁，皆拔赵旗，立汉赤帜二千。赵军已不能得信等，兵遂乱，遁走，于是汉兵夹击，大破赵军，斩成安君泜水上，禽赵王歇。信募生得广武君者予千金。有缚致麾下者，信解其缚，东乡坐，师事之。从其策，发使使燕，燕从风而靡；遣使报汉，且请以张耳王赵，汉王许之。楚数使奇兵渡河击赵，张耳、韩信往来救赵，因行定赵城邑，发兵诣汉。
-
-> 随何至九江，说服九江王英布畔楚与汉。于是杀楚使者，因起兵而攻楚。
+> 冬，十月，韩信、张耳以兵数万东击赵。赵王及成安君陈馀闻之，聚兵井陉口，号二十万。信所出奇兵二千骑共候赵空壁逐利，则驰入赵壁，皆拔赵旗，立汉赤帜二千。赵军已不能得信等，兵遂乱，遁走，于是汉兵夹击，大破赵军，斩成安君泜水上，禽赵王歇。信募生得广武君者予千金。有缚致麾下者，信解其缚，东乡坐，师事之。从其策，发使使燕，燕从风而靡；遣使报汉，且请以张耳王赵，汉王许之。楚数使奇兵渡河击赵，张耳、韩信往来救赵，因行定赵城邑，发兵诣汉。随何说服九江王英布畔楚与汉，起兵而攻楚。
 
 > 楚数侵夺汉甬道，汉军乏食。汉王与郦食其谋桡楚权，食其建议汉王立六国之后。食其未行，张良从外来谒。曰：“今复立六国之后，天下游士各归事其主，从其亲戚，反其故旧、坟墓，陛下与谁取天下乎？！”因此刘邦取消了立流过之后的想法。
 
@@ -72,13 +60,14 @@ date: 2022-12-27 15:43:01
 
 <hr/>
 
-> 冬，十月，信袭破齐历下军，遂至临淄。齐王以郦生为卖己，乃烹之；引兵东走高密，使使之楚请救。田横走博阳，守相田光走城阳，将军田既军于胶东。
-
-> 楚大司马咎守成皋，汉数挑战，楚军不出。使人辱之，数日，咎怒，渡兵汜水。士卒半渡，汉击之，大破楚军，尽得楚国金玉、货赂，咎及司马欣皆自刭汜水上。汉王引兵渡河，复取成皋，军广武，就敖仓食。
+> 冬，十月，信袭破齐历下军，遂至临淄，烹郦生。楚大司马咎守成皋，汉数挑战，楚军不出。使人辱之，数日，咎怒，渡兵汜水。士卒半渡，汉击之，大破楚军，尽得楚国金玉、货赂，咎及司马欣皆自刭汜水上。汉王引兵渡河，复取成皋，军广武，就敖仓食。
 
 > 项羽下梁地十馀城，闻成皋破，乃引兵还。汉军方围钟离昩于荥阳东，羽亦军广武，与汉相守。数月，楚军食少。项王患之，乃为高祖，置太公其上，告汉王曰：“今不急下，吾烹太公！”汉王曰：“吾与羽俱北面受命怀王，约为兄弟，吾翁即若翁；必欲烹而翁，幸分我一杯羹！”项王怒，欲杀之。项伯曰：“天下事未可知。且为天下者不顾家，虽杀之，无益，只益祸耳！”项王从之。项王谓汉王曰：“愿与汉王挑战，决雌雄，毋徒苦天下之民父子为也！”汉王笑谢曰；“吾宁斗智，不能斗力！”项王三令壮士出挑战，汉有善骑射者楼烦辄射杀之。项王大怒，乃自被甲持戟挑战。汉王使人间问之，乃项王也，汉王大惊。汉王数羽十罪。羽大怒，伏弩射中汉王。汉王伤胸，乃扪足曰：“虏中吾指。”汉王病创卧。汉王出行军，疾甚，因驰入成皋。
+
 > 韩信已定临淄，遂东追齐王。项王使龙且将兵，号二十万，以救齐，与齐王合军高密。客或说龙且曰：“汉兵远斗穷战，其锋不可当。齐、楚自居其地，兵易败散。不如深壁，令齐王使其信臣招所亡城；亡城闻王在，楚来救，必反汉。汉兵二千里客居齐地，齐城皆反之，其势无所得食，可无战而降也。”龙且曰：“吾平生知韩信为人，易与耳！寄食于漂母，无资身之策；受辱于袴下，无兼人之勇，不足畏也。且夫救齐，不战而降之，吾何功！今战而胜之，齐之半可得也。”十一月，齐、楚与汉夹潍水而陈。韩信储夜令人为万馀囊，满盛沙，壅水上流；引军半渡击龙且，佯不胜，还走。龙且果喜曰：“固知信怯也！”遂追信。信使人决壅囊，水大至，龙且军太半不得渡。即急击杀龙且，水东军散走，齐王广亡去。信遂追北至成阳，虏齐王广。汉将灌婴追得齐守相田光，进至博阳。田横闻齐王死，自立为齐王，还击婴，婴败横军于嬴下。田横亡走梁，归彭越。婴进击齐将田吸于千乘，曹参击田既于胶东，皆杀之，尽定齐地。
+
 > 汉王疾愈，西入关。至栎阳，枭故塞王欣头栎阳市。留四日，复如军，军广武。
+
 > 韩信使人言汉王曰：“齐伪诈多变，反覆之国也；南边楚。请为假王以镇之。”汉王发书，大怒，骂曰：“吾困于此，旦暮望若来佐我，乃欲自立为王！”张良、陈平蹑汉王足，因附耳语曰：“汉方不利，宁能禁信之自王乎！不如因而立之，善遇，使自为守。不然，变生。”汉王亦悟，因复骂曰：“大丈夫定诸侯，即为真王耳，何以假为！”春，二月，遣张良操印立韩信为齐王，征其兵击楚。
 
 > 项王闻龙且死，大惧，使盱台人涉往说齐王信曰：“天下共苦秦久矣，相与戮力击秦。秦已破，计功割地，分土而王之，以休士卒。今汉王复兴兵而东，侵人之分，夺人之地；已破三秦，引兵出关，收诸侯之兵以东击楚，其意非尽吞天下者不休，其不知厌足如是甚也！且汉王不可必，身居项王掌握中数矣，项王怜而活之；然得脱，辄倍约，复击项王，其不可亲信如此。今足下虽自以与汉王为厚交，为之尽力用兵，必终为所禽矣。足下所以得须臾至今者，以项王尚存也。当今二王之事，权在足下，足下右投则汉王胜，左投则项王胜。项王今日亡，则次取足下。足下与项王有故，何不反汉与楚连和，参分天下王之！今释此时而自必于汉以击楚，且为智者固若此乎？！”韩信谢曰：“臣事项王，官不过郎中，位不过执戟；言不听，画不用，故倍楚而归汉。汉王授我上将军印，予我数万众，解衣衣我，推食食我，言听计用，故吾得以至于此。夫人深亲我，我倍之不祥；虽死不易！幸为信谢项王！”
