--- a/_posts/2022-12-28-读《资治通鉴》札记（十一）.md
+++ b/_posts/2022-12-28-读《资治通鉴》札记（十一）.md
@@ -99,9 +99,6 @@ date: 2022-12-28 15:43:01
 
 > 匈奴寇狄道，攻阿阳。
 
-> 行五分钱。
-
-
 ### 高皇后七年庚申（前181）
 
 <hr/>
@@ -112,6 +109,8 @@ date: 2022-12-28 15:43:01
 ### 高皇后八年辛酉（前180）
 
 <hr/>
+
+#### 吕欲之乱
 
 > 秋，七月，太后病甚，乃令赵王禄为上将军，吕王产居南军，诫产、禄曰：“吕氏之王，大臣弗平。我即崩，帝年少，大臣恐为变。必据兵卫宫，慎毋送丧，为人所制！”辛巳，太后崩。
 
@@ -211,8 +210,6 @@ date: 2022-12-28 15:43:01
 
 > 十二月，免丞相勃，遣就国。乙亥，以太尉灌婴为丞相；罢太尉官，属丞相。
 
-> 夏，四月，城阳景王章薨。
-
 > 初，赵王敖献美人于高祖，得幸，有娠。及贯高事发，美人亦坐系河内。美人母弟赵兼因辟阳侯审食其言吕后，吕后妒，弗肯白。美人已生子，恚，即自杀。吏奉其子诣上，上悔，名之曰长，令吕后母之，而葬其母真定。后封长为淮南王。
 
 > 淮南王蚤失母，常附吕后，故孝惠、吕后时得无患；而常心怨辟阳侯，以为不强争之于吕后，使其母恨而死也。及帝即位，淮南王自以最亲，骄蹇，数不奉法；上常宽假之。是岁，入朝，从上入苑囿猎，与上同车，常谓上“大兄”。王有材力，能扛鼎。乃往见辟阳侯，自袖铁椎椎辟阳侯，令从者魏敬刭之；驰走阙下，肉袒谢罪。帝伤其志为亲，故赦弗治。当是时，薄太后及太子、诸大臣皆惮淮南王。淮南王以此，归国益骄恣，出入称警跸，称制拟于天子。袁盎谏曰：“诸侯太骄，必生患。”上不听。
@@ -255,8 +252,6 @@ date: 2022-12-28 15:43:01
 
 > 初，秦用半两钱，高祖嫌其重，难用，更铸荚钱。于是物价腾踊，米至石万钱。夏，四月，更造四铢钱，除盗铸钱令，使民得自铸。
 
-> 贾谊谏曰：“法使天下公得雇租铸铜、锡为钱，敢杂以铅、铁为它巧者，其罪黥。然铸钱之情，非殽杂为巧，则不可得赢；而殽之甚微，为利其厚。夫事有召祸而法有起奸；今令细民人操造币之势，各隐屏而铸作，因欲禁其厚利微奸，虽黥罪日报，其势不止。乃者，民人抵罪多者一县百数，及吏之所疑搒笞奔走者甚众。夫县法以诱民，使入隐阱，孰多于此！又民用钱，郡县不同：或用轻钱，百加若干；或用重钱，平称不受。法钱不立，吏急而壹之乎？则大为烦苛而力不能胜；纵而弗呵乎？则市肆异用，钱文大乱；苟非其术，何乡而可哉！今农事弃捐而采铜者日蕃，释其耒耨，冶熔炊炭；奸钱日多，五谷不为多。善人怵而为奸邪，愿民陷而之刑戮；刑戮将甚不详，奈何而忽！国知患此，吏议必曰‘禁之’。禁之不得其术，其伤必大。令禁铸钱，则钱必重；重则其利深，盗铸如云而起，弃市之罪又不足以禁矣。奸数不胜而法禁数溃，铜使之然也。铜布于天下，其为祸博矣，故不如收之。”贾山亦上书谏，以为：“钱者，亡用器也，而可以易富贵。富贵者，人主之操柄也；令民为之，是与人主共操柄，不可长也。”上不听。
-
 > 是时，太中大夫邓通方宠幸，上欲其富，赐之蜀严道铜山，使铸钱。吴王濞有豫章铜山，招致天下亡命者以铸钱；东煮海水为盐；以故无赋而国用饶足。于是吴、邓钱布天下。
 
 > 初，帝分代为二国，立皇子武为代王，参为太原王。是岁，徙代王武为淮阳王；以太原王参为代王，尽得故地。
@@ -264,10 +259,6 @@ date: 2022-12-28 15:43:01
 ### 太宗孝文皇帝六年丁卯（前174）
 
 <hr/>
-
-> 太宗孝文皇帝中六年（丁卯，公元前一七四年）
-
-> 冬，十月，桃、李华。
 
 > 淮南厉王长自作法令行于其国，逐汉所置吏，请自置相、二千石；帝曲意从之。又擅刑杀不辜及爵人至关内侯；数上书不逊顺。帝重自切责之，乃令薄昭与书风谕之，引管、蔡及代顷王、济北王兴居以为儆戒。
 
@@ -315,8 +306,6 @@ date: 2022-12-28 15:43:01
 
 <hr/>
 
-> 太宗孝文皇帝中七年（戊辰，公元前一七三年）
-
 > 冬，十月，令列侯太夫人、夫人、诸侯王子及吏二千石无得擅征捕。
 
 > 夏，四月，赦天下。
@@ -328,7 +317,6 @@ date: 2022-12-28 15:43:01
 ### 太宗孝文皇帝八年己巳（前172）
 
 <hr/>
-> 太宗孝文皇帝中八年（己巳，公元前一七二年）
 
 > 夏，封淮南厉王子安等四人为列侯。贾谊知上必将复王之也，上疏谏曰：“淮南王之悖逆无道，天下孰不知其罪！陛下幸而赦迁之，自疾而死，天下孰以王死之不当！今奉尊罪人之子，适足以负谤于天下耳。此人少壮，岂能忘其父哉！白公胜所为父报仇者，大父与叔父也。白公为乱，非欲取国代主，发忿快志，剡手以冲仇人之匈，固为俱靡而已。淮南虽小，黥布尝用之矣，汉存，特幸耳。夫擅仇人足以危汉之资，于策不便。予之众，积之财，此非有子胥、白公报于广都之中，即疑有专诸、荆轲起于两柱之间，所谓假贼兵，为虎翼者也。愿陛下少留计！”上弗听。
 
@@ -346,10 +334,6 @@ date: 2022-12-28 15:43:01
 
 <hr/>
 
-> 太宗孝文皇帝中十年（辛未，公元前一七零年）
-
-> 冬，上行幸甘泉。
-
 > 将军薄昭杀汉使者。帝不忍加诛，使公卿从之饮酒。欲令自引分，昭不肯；使群臣丧服往哭之，乃自杀。
 
 > 臣光曰：李德裕以为：“汉文帝诛薄昭，断则明矣，于义则未安也。秦康送晋文，兴如存之感；况太后尚存，唯一弟薄昭，断之不疑，非所以慰母氏之心也。”臣愚以为法者天下之公器，惟善持法者，亲疏如一，无所不行，则人莫敢有所恃而犯之也。夫薄昭虽素称长者，文帝不为置贤师傅而用之典兵；骄而犯上，至于杀汉使者，非有恃而然乎！若又从而赦之，则与成、哀之世何异哉！魏文帝尝称汉文帝之美，而不取其杀薄昭，曰：“舅后之家，但当养育以恩而不当假借以权，既触罪法，又不得不害。”讥文帝之始不防闲昭也，斯言得之矣。然则欲慰母心者，将慎之于始乎！
@@ -361,12 +345,6 @@ date: 2022-12-28 15:43:01
 ### 太宗孝文皇帝十一年（前169）
 
 <hr/>
-
-> 太宗孝文皇帝下前十一年（壬申，公元前一六九年）
-
-> 冬，十一月，上行幸代。
-
-> 春，正月，自代还。
 
 > 夏，六月，梁怀王揖薨，无子。贾谊复上疏曰：“陛下即不定制，如今之势，不过一传、再传，诸侯犹且人恣而不制，豪植而大强，汉法不得行矣。陛下所以为籓扞及皇太子之所恃者，唯淮阳、代二国耳。代，北边匈奴，与强敌为邻，能自完则足矣；而淮阳之比大诸侯，廑如黑子之著面，适足以饵大国，而不足以有所禁御。方今制在陛下，制国而令子适足以为饵，岂可谓工哉！臣之愚计，愿举淮南地以益淮阳，而为梁王立后，割淮阳北边二、三列城与东郡以益梁。不可者，可徙代王而都睢阳。梁起于新郪而北著之河，淮阳包陈而南揵之江，则大诸侯之有异心者破胆而不敢谋。梁足以扞齐、赵，淮阳足以禁吴、楚，陛下高枕，终无山东之忧矣，此二世之利也。当今恬然，适遇诸侯之皆少；数岁之后，陛下且见之矣。夫秦日夜苦心劳力以除六国之祸；今陛下力制天下，颐指如意，高拱以成六国之祸，难以言智，苟身无事，畜乱，宿祝，孰视而不定；万年之后，传之老母、弱子，将使不宁，不可谓仁。”帝于是从谊计，徙淮阳王武为梁王，北界泰山，西至高阳，得大县四十馀城。后岁馀，贾谊亦死，死时年三十三矣。徙城阳王喜为淮南王。
 
@@ -397,8 +375,6 @@ date: 2022-12-28 15:43:01
 ### 太宗孝文皇帝十二年癸酉（前168）
 
 <hr/>
-
-> 太宗孝文皇帝下十二年（癸酉，公元前一六八年）
 
 > 冬，十二月，河决酸枣，东溃金堤，东郡大兴卒塞之。
 
@@ -437,7 +413,6 @@ date: 2022-12-28 15:43:01
 ### 太宗孝文皇帝十四年乙亥（前166）
 
 <hr/>
-> 太宗孝文皇帝下十四年（乙亥，公元前一六六年）
 
 > 冬，匈奴老上单于十四万骑入朝那、萧关，杀北地都尉卬，虏人民畜产甚多；遂至彭阳，使奇兵入烧回中宫，候骑至雍甘泉。帝以中尉周舍、郎中令张武为将军，发车千乘、骑卒十万军长安旁，以备胡寇；而拜昌侯卢卿为上郡将军，甯侯魏为北地将军，隆虑侯周灶为陇西将军，屯三郡。上亲劳军，勒兵，申教令，赐吏卒，自欲征匈奴。群臣谏，不听；皇太后固要，上乃止。于是以东阳侯张相如为大将军，成侯董赤、内史栾布皆为将军，击匈奴。单于留塞内月馀，乃去。汉逐出塞即还，不能有所杀。
 
@@ -451,7 +426,6 @@ date: 2022-12-28 15:43:01
 ### 太宗孝文皇帝十五年丙子（前165）
 
 <hr/>
-> 太宗孝文皇帝下十五年（丙子，公元前一六五年）
 
 > 春，黄龙见成纪。帝召公孙臣，拜为博士，与诸生申明土德，草改历、服色事。张苍由此自绌。
 
@@ -760,4 +734,4 @@ date: 2022-12-28 15:43:01
 
 > 汉兴，接秦之弊，作业剧而财匮，自天子不能具钧驷，而将相或乘牛车，齐民无藏盖。天下已平，高祖乃令贾人不得衣丝、乘车，重租税以困辱之。孝惠、高后时，为天下初定，复驰商贾之律；然市井之子孙，亦不得仕宦为吏。量吏禄，度官用，以赋于民。而山川、园池、市井租税之入，自天子以至于封君汤沐邑，皆各为私奉养焉，不领于天下之经费。漕转山东粟以给中都官，岁不过数十万石。继以孝文、孝景，清净恭俭，安养天下，七十馀年之间，国家无事，非遇水旱之灾，民则人给家足。都鄙廪庾皆满，而府库馀货财；京师之钱累巨万，贯朽而不可校；太仓之粟陈陈相因，充溢露积于外，至腐败不可食。众庶街巷有马，而阡陌之间成群，乘字牝者摈而不得聚会。守闾阎者食粱肉，为吏者长子孙，居官者以为姓号。故人人自爱而重犯法，先行义而后绌辱焉。当此之时，罔疏而民富，役财骄溢，或至兼并；豪党之徒，以武断于乡曲。宗室有土，公、卿、大夫以下，争于奢侈，室庐、舆服僭于上，无限度。物盛而衰，固其变也。自是之后，孝武内穷侈靡，外攘夷狄，天下萧然，财力耗矣！
 
-下接汉纪九
+### 下接汉纪九
